Updated with website revision dated April 8th 2018

--- a/www/the_book/jer13an.htm
+++ b/www/the_book/jer13an.htm
@@ -1,33 +1,35 @@
 <html>
 <head>
 <title>Jeremiah 13 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="jer13.htm#1" target="lwr_lt">Jeremiah 13</a> - <a href="jer_menu.htm" target="lwr_lt">Outline of Jeremiah </b>(MENU page)</a><br>
 <dl><dt><b>The Sign of the Linen Girdle-</b>
-<dd>The Pride of Judah and Jerusalem: Like a Linen Girdle (ch. 13)
-<dt>I. The Pride Exposed (v.1-14)<dl>
+<dd>The Pride of Judah and Jerusalem: to be brought down at Babylon (ch. 13)
+<dt>I. The Pride Exposed (v.1-14)</dt><dl>
 <dt>A. Jeremiah's illustration: a Girdle...<ol type="1">
 <li>Obtained and worn (<a href="jer13.htm#1" target="lwr_lt">v.1,2</a>)
 <li>Hidden at the Euphrates (<a href="jer13.htm#3" target="lwr_lt">v.3-5</a>)<dd>
-Some Bible students think that Jeremiah hid his girdle at a brook, the Wadi Fara, which flowed passed the village of Parah, just a few miles from Anathoth. Although the HB word for Euphrates (Parath) sounds similar to the village name, it is not used where this village is mentioned (<a href="josh18.htm#23">Josh 18:23</a>), and is applied exclusively to the great river in all other occurrences. Jeremiah's  long journey to the Euphrates would have served to illustrate the coming Babylonian captivity much more clearly than a quick trip to the next town. Likewise, the time elapsed during his journeys would accomplish the ruin of the garment, while illustrating the duration of the captivity. Some argue that a journey to the Euphrates would have consumed several months, and would have been an unreasonable disruption to Jeremiah's life. Yet, Jeremiah's obedience teaches us that we are to be instant in season and out, even when God's will seems inconvenient to the flesh.
+Some Bible students think that Jeremiah hid his girdle at a brook, the Wadi Fara, which flowed passed the village of Parah, just a few miles from Anathoth. Although the HB word for Euphrates (Parath) sounds similar to the village name, it is not used where this village is mentioned (<a href="josh18.htm#23">Josh 18:23</a>), and is applied exclusively to the great river in all other occurrences. Jeremiah's  long journey to the Euphrates would have served to illustrate the coming Babylonian captivity much more clearly than a quick trip to the next town. Likewise, the time elapsed during his journeys would accomplish the ruin of the garment, while illustrating the duration of the captivity (ie., 'many days'). Some argue that a journey to the Euphrates would have consumed several months, and would have been an unreasonable disruption to Jeremiah's life. Yet, Jeremiah's obedience teaches us that we are to be instant in season and out, even when God's will seems inconvenient to the flesh.</dd>
 <li>Profitable for nothing (<a href="jer13.htm#6" target="lwr_lt">v. 6,7</a>) - marred {HB shachath: destroyed, corrupted, ruined}.</ol>
 <dt>B. The Lord's explanation (<a href="jer13.htm#8" target="lwr_lt">13:8-14</a>):<ol type="1">
 <li>Judah's pride (v.9) to be marred, because they had marred their privileged purpose. (v.8-11)<ul>
-<li>They  had become good for nothing  (same HB phrase as in v.7).
-They were proud of their relationship to other nations and their gods (v.9,10; cp. <a href="eze23.htm#13">Eze 23:13-16</a>). But the glory of these things would fail. cp. <a href="isa3.htm#24">Isa 3:24</a>
-<li>The Lord had intended for Israel to be in close relationship to Him, as His people (cp. <a href="ex19.htm#5">Ex 19:5,6</a>; <a href="1pet2.htm#9">1Pet 2:9</a>); for the Praise and Glory of His Name. There may be several aspects to the illustration: A girdle that &quot;cleaves to the loins of a man&quot; illustrates the intimacy of the relationship. A beautiful girdle was an important outer piece of Aaron's priestly garments which were &quot;for glory and for beauty&quot; (<a href="ex28.htm#2">Ex 28:2,8</a>; cp. <a href="rev1.htm#13">Rev 1:13</a>). A linen garment speaks of purity and righteousness. A leather girdle indicates humility and lowly service (cp. <a href="2kin1.htm#8">2Kin 1:8</a>; <a href="mat3.htm#4">Mat 3:4</a>). The Almighty girded Himself to serve (<a href="joh13.htm#4">Joh 13:4</a>) and invites us to follow His example (<a href="luk12.htm#35">Luk 12:35</a>). (Also see note at v.18 below.)</ul>
-<li>Judah's proud to be filled with the wine of God's wrath. (v.12-14) cp. <a href="jer25.htm#15">Jer 25:15-18,27</a>; <a href="jer51.htm#7">51:7</a><dd>These wineskins would themselves be marred (cp. <a href="mar2.htm#22">Mark 2:22</a>).</ol></dl>
-<p>II. The Surrender of Pride Exhorted (<a href="jer13.htm#15" target="lwr_lt">v.15-17</a>)
-<p>III. The Downfall of Pride Described (v.18-27)<dl>
+<li>They  had become 'good for nothing' (same HB phrase as in v.7).<dd>
+They were proud of their relationship to other nations and their gods (v.9,10; cp. <a href="eze23.htm#13">Eze 23:13-16</a>). But the glory of these things would fail. cp. <a href="isa3.htm#24">Isa 3:24</a></dd>
+<li>The Lord had intended for Israel to be in close relationship to Him, as His people (cp. <a href="ex19.htm#5">Ex 19:5,6</a>; <a href="1pet2.htm#9">1Pet 2:9</a>); for the Praise and Glory of His Name.<dd>There may be several aspects to the illustration:<ul><li>A girdle that &quot;cleaves to the loins of a man&quot; illustrates the intimacy of the relationship.<li>A beautiful girdle was an important outer piece of Aaron's priestly garments which were &quot;for glory and for beauty&quot; (<a href="ex28.htm#2">Ex 28:2,8</a>; cp. <a href="rev1.htm#13">Rev 1:13</a>).<li>A linen garment speaks of purity and righteousness.<li>A leather girdle indicates humility and lowly service (cp. <a href="2kin1.htm#8">2Kin 1:8</a>; <a href="mat3.htm#4">Mat 3:4</a>).<li>The Almighty girded Himself to serve (<a href="joh13.htm#4">Joh 13:4</a>) and invites us to follow His example (<a href="luk12.htm#35">Luk 12:35</a>).</ul></dd></ul>
+<li>Judah's proud to be filled with the wine of God's wrath. (v.12-14) cp. <a href="jer25.htm#15">Jer 25:15-18,27</a>; <a href="jer51.htm#7">51:7</a><dd>These wineskins (ie., the proud rulers) would themselves be marred (cp. <a href="mar2.htm#22">Mark 2:22</a>).</ol></dl><dt>&nbsp;
+<dt>II. The Surrender of Pride Exhorted (<a href="jer13.htm#15" target="lwr_lt">v.15-17</a>)
+<dd>Again, in mercy, the Lord calls them to humble themselves before Him, and turn back from the path of sorrow and destruction, to which their proud rebellion was destined.<dt>&nbsp;
+<dt>III. The Downfall of Pride Described (v.18-27)</dt><dl>
 <dt>A. Their glory would be debased (<a href="jer13.htm#18" target="lwr_lt">v.18-21</a>)<ul>
-<li>The glory of king and rulers, brought down. (v.18) (cp. <a href="job12.htm#18">Job 12:18</a>, where those clothed with a girdle have been reduced to poverty and servitude.)
-<li>The beauty of the people, lost in captivity. (v.19,20)
+<li>The glory of king and rulers, brought down. (v.18)<dd>(cp. <a href="job12.htm#18">Job 12:18</a>, which speaks of kings being relieved of their power, to be reduced to wearing a servant's girdle.)</dd>
+<li>The 'beautiful flock' (God's people) would be lost in captivity (v.19,20),<dd>due to the willful pride of their shepherds (<a href="eze34.htm#7">Eze 34:7-10</a>; <a href="act20.htm#28">Acts 20:28,29</a>).</dd>
 <li>The chief among them, brought to despair. (v.21)</ul>
 <dt>B. Their debased nature would be exposed (<a href="jer13.htm#22" target="lwr_lt">v.22-27</a>)<dd>The reason they are brought down to servitude (naked and barefoot, v.22):<ul>
 <li>Their incorrigible nature to sin. (<a href="jer13.htm#22" target="lwr_lt">v.22-24</a>) cp. <a href="jer2.htm#22">Jer 2:22,30</a>; <a href="jer5.htm#3">5:3</a>; <a href="rom8.htm#7">Rom 8:7,8</a>
 <li>Their adulterous departure from the Lord. (<a href="jer13.htm#25" target="lwr_lt">v.25-27</a>)</ul>
-Compare the Lord's lament, at the close of this message  (also note the closing phrase of <a href="jer13.htm#11" target="lwr_lt">v.11</a>), with <a href="mat23.htm#37">Mat 23:37</a>.
+<li>Their continuing state of impurity (v.27b).
+<dd>Although the Lord repeatedly called them to repentance, and offered to heal their condition, they refused to hear (<a href="jer13.htm#11" target="lwr_lt">v.11</a>), and relished the filth of their chosen way. The Lord laments the hardness of their hearts (cp. <a href="jer13.htm#17" target="lwr_lt">v.17</a>; <a href="mat23.htm#37">Mat 23:37</a>).
 </dl></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in <a href="jer14n15.htm" target="upper">Jeremiah 14 - 15</a>
