--- a/www/the_book/jer14n15.htm
+++ b/www/the_book/jer14n15.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Jeremiah 14 - 15 Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="jer14.htm#1" target="lwr_lt">Jeremiah 14 - 15</a> - <a href="jer_menu.htm" target="lwr_lt">Outline of Jeremiah </b>(MENU page)</a><br>
 <dl><dt><b>The Drought and Jeremiah's Intercession: A parched land, bathed in tears.</b>
@@ -15,40 +15,40 @@
 <li>the wild asses- Animals, known for fierce independence, are frustrated and without options.</ul>
 <dt>II. Jeremiah's First Intercession, <a href="jer14.htm#7" target="lwr_lt">14:7-12</a><dd><ol type="A">
 <li>Jeremiah prays (14:7-9). He appeals to the Lord, on the basis of:<ol type="1">
-<li>Confession of sin (v.7).
-<li>God's identification with His people (v.8).
-<li>God's power to save (v.9a).
-<li>God's presence among a people identified with Him (v.9b).</ol>
-<li>The Lord answers (14:10-12):<ol type="1">
+<li>Confession of sin (v.7a,c).
+<li>The LORD's name (v.7b).- ie., That He should receive glory for his merciful kindness. <a href="psa25.htm#11">Psa 25:11</a>; <a href="eze20.htm#9">Eze 20:9</a>; <a href="dan9.htm#9">Dan 9:9,18-19</a>
+<li>The LORD's historic identification with His people (v.8).
+<li>The LORD's power to save (v.9a).
+<li>The LORD's presence among a people identified with Him (v.9b).</ol>
+<li>The Lord answers (<a href="jer14.htm#10" target="lwr_lt">14:10-12</a>):<ol type="1">
 <li>(Contrary to Jeremiah's confession on their behalf)....
-The people love to sin, and show no sign of repentance. Their sin must be judged. (in answer to Jeremiah's confession on their behalf). (v.10)
+<dd>The people love to sin, and show no sign of repentance. Their sin must be judged. (v.10)</dd>
 <li>(Contrary to Jeremiah's appeal to the special relationship of this people to the Lord)...
-The people are not accepted, though they approach with prayers, fasting and sacrifices. Judgment will consume them. (v.11-12). Even Jeremiah's prayers would not be accepted in their behalf. (cp. <a href="jer7.htm#16">7:16</a>; <a href="jer11.htm#14">11:14</a>)</ol></ol>
+<dd>The people are not accepted, though they approach with prayers, fasting and sacrifices.</dd><dd>Judgment will consume them. (v.11-12).</dd><dd>Even Jeremiah's prayers would not be accepted in their behalf. (cp. <a href="jer7.htm#16">7:16</a>; <a href="jer11.htm#14">11:14</a>)</dd></ol></ol>
 <dt>III. Jeremiah's Second Intercession, <a href="jer14.htm#13" target="lwr_lt">14:13-18</a><dd><ol type="A">
-<li>Jeremiah appeals (v.13) on the basis of:<br>The deception of the people by false teachers. (ie., It's not their fault. They were deceived.)
+<li>Jeremiah appeals (v.13) on the basis of:<dd>The deception of the people by false teachers. (ie., It's not their fault. They were deceived.)</dd>
 <li>The Lord answers:<ol type="1">
 <li>The false prophets will be judged, by the judgment which they deny  (v.14,15). 
-<li>The people will be judged, for receiving their false teaching (v.16-18, cp. <a href="jer5.htm#31">5:31</a>; <a href="eze14.htm#9">Eze 14:9-11</a>; also see <a href="2the2.htm#10">2The 2:10-12</a>).<br>The present drought foreshadowed the famine during the future siege (cp. <a href="2kin25.htm#3">2Kin 25:3</a>). The troubles described, in v.18, befell them during the siege of Jerusalem (cp. <a href="eze7.htm#15">Eze 7:15</a>) and the subsequent captivity.<br>Jeremiah's tears reflect the Lord's sorrow for His people. (v.17)</ol></ol>
+<li>The people will be judged, for receiving their false teaching (v.16-18, cp. <a href="jer5.htm#31">5:31</a>; <a href="eze14.htm#9">Eze 14:9-11</a>; also <a href="2the2.htm#10">2The 2:10-12</a>).<dd>The present drought foreshadowed the famine during the future siege (cp. <a href="2kin25.htm#3">2Kin 25:3</a>).</dd><dd>The troubles described, in v.18, befell them during the siege of Jerusalem (cp. <a href="eze7.htm#15">Eze 7:15</a>) and the subsequent captivity.</dd><dd>Jeremiah's tears reflect the Lord's sorrow for His people. (v.17)</ol></ol>
 <dt>IV. Jeremiah's Third Intercession, 14:19 - 15:9<dd><ol type="A">
 <li>Jeremiah appeals (<a href="jer14.htm#19" target="lwr_lt">14:19-22</a>) on the basis of:<ol type="1">
 <li>The tenderness of the Great Physician (v.19; cp. <a href="ex15.htm#26">Ex 15:26</a>)
 <li>The forgiveness of God (v.20; cp. <a href="jer9.htm#24">Jer 9:24</a>; <a href="ex34.htm#6">Ex 34:6,7</a>)
 <li>The honor of God's Name and Covenant (v.21). (cp. <a href="ex32.htm#11">Ex 32:11-13</a>)
-<li>The exclusivity of His Deity. (v.22).<br>
-Though some might vainly appeal to idols or to the heavenly bodies, Jeremiah acknowledged that only the Creator God had power to send rain and end the drought. (cp. <a href="jer10.htm#10">Jer 10:10-13</a>)</ol>
-Note that throughout this prayer, Jeremiah identifies himself with his people, by saying &quot;us... we...&quot; (also in <a href="jer14.htm#7" target="lwr_lt">14:7-9</a>).
+<li>The exclusivity of His Deity. (v.22).
+<dd>Though some might vainly appeal to idols or to the heavenly bodies, Jeremiah acknowledged that only the Creator God had power to send rain and end the drought. (cp. <a href="jer10.htm#10">Jer 10:10-13</a>)</dd></ol>
+<dd>Note that throughout this prayer, Jeremiah identifies himself with his people, by saying &quot;us... we...&quot; (also in <a href="jer14.htm#7" target="lwr_lt">14:7-9</a>).</dd>
 <li>The Lord answers (<a href="jer15.htm#1" target="lwr_lt"><b>15:</b>1-9</a>):<ol type="1">
-<li>I could not accept these people, even if their case was appealed by Moses and Samuel (<a href="jer15.htm#1" target="lwr_lt">15:1</a>). Moses (<a href="ex32.htm#11">Ex 32:11,12</a>) and Samuel (<a href="1sam7.htm#8">1Sam 7:8,9</a>; <a href="1sam8.htm#6">8:6</a>; <a href="1sam12.htm#16">12:16-23</a>; <a href="psa99.htm#6">Psa 99:6</a>) were great intercessors.
-The problem was not with Jeremiah's prayer life, nor with God's ability to deliver, but with the sinfulness of the people (<a href="isa59.htm#1">Isa 59:1,2</a>). (Also see <a href="eze14.htm#12">Eze 14:12-21</a>: Noah, Daniel and Job were known for their righteousness.)
+<li>I could not accept these people, even if their case was appealed by Moses and Samuel (<a href="jer15.htm#1" target="lwr_lt">15:1</a>).<dd>Moses (<a href="ex32.htm#11">Ex 32:11,12</a>) and Samuel (<a href="1sam7.htm#8">1Sam 7:8,9</a>; <a href="1sam8.htm#6">8:6</a>; <a href="1sam12.htm#16">12:16-23</a>; <a href="psa99.htm#6">Psa 99:6</a>) were great intercessors.</dd><dd>The problem was not with Jeremiah's prayer life, nor with God's ability to deliver, but with the sinfulness of the people (<a href="isa59.htm#1">Isa 59:1,2</a>).</dd><dd>(Also see <a href="eze14.htm#12">Eze 14:12-21</a>: Noah, Daniel and Job were known for their righteousness.)</dd>
 <li>I will cast them away (<a href="jer15.htm#2" target="lwr_lt">15:2</a>) to:<ol type="a">
 <li>Death - by any means (cp. <a href="jer9.htm#20">Jer 9:20,21</a>; <a href="jer14.htm#12">14:12</a>)
 <li>the Sword (outside the city)
 <li>the Famine (inside the city, during the coming siege), cp. <a href="jer14.htm#13">14:13-15</a>
 <li>the Captivity (upon the fall of the city), cp. <a href="jer14.htm#16">14:16-18</a></ol>
-The 'four kinds' of <a href="jer15.htm#3" target="lwr_lt">v.3</a>, may refer to judgments upon their false confidences, including military might and the beasts which they worshiped. (cp. <a href="rom1.htm#23">Rom 1:23</a>).
+The 'four kinds' of <a href="jer15.htm#3" target="lwr_lt">v.3</a>, may refer to judgments upon their false confidences, including military might and the beasts which they worshipped (cp. <a href="rom1.htm#23">Rom 1:23</a>; <a href="eze14.htm#21">Eze 14:21</a>).
 <li>I will cast them away because:<ol type="a">
-<li>King Manasseh, and the kings that followed him, had led the nation into corruption. (<a href="jer15.htm#4" target="lwr_lt">15:4</a>; cp. <a href="2kin21.htm#1">2Kin 21:1-9</a>; <a href="2kin23.htm#26">23:26,27</a>; <a href="2kin24.htm#3">24:3,4</a>)<br>Who shall have pity on thee? (v.5)- Their judgment was fully justified. No one would come to take up their cause. (But see <a href="isa51.htm#19">Isa 51:19</a>, and its context [<a href="isa51.htm#17">Isa 51:17-23</a>], where it is the Lord Himself, who, in the end, pities and redeems Israel.)
-<li>The people turned away from God, and refused to turn back (v.6-7).<br>The severity of the coming judgment is described in v.8-9. The &quot;spoiler&quot; is Nebuchadnezzar and his army. The destruction is so severe that a mother with seven sons will be bereaved of them all.</ol></ol></ol>
+<li>King Manasseh, and the kings that followed him, had led the nation into corruption. (<a href="jer15.htm#4" target="lwr_lt">15:4</a>; see <a href="2kin21.htm#1">2Kin 21:1-9</a>; <a href="2kin23.htm#26">23:26,27</a>; <a href="2kin24.htm#3">24:3,4</a>)<dd>Who shall have pity on thee? (v.5)- Their judgment was fully justified. No one would come to take up their cause.</dd><dd>(But see <a href="isa51.htm#19">Isa 51:19</a>, and its context [<a href="isa51.htm#17">Isa 51:17-23</a>], where it is the Lord Himself, who, in the end, pities and redeems Israel.)</dd>
+<li>The people turned away from God, and refused to turn back (v.6-7).<ul><li>The Lord had repeatedly warned them. He had repeatedly withheld His wrath. But He would no longer turn back {'repent'} from exercising the deserved judgment.<li>The severity of that judgment is described in v.8-9. The &quot;spoiler&quot; is Nebuchadnezzar and his army. The destruction is so severe that widows will be innumerable, and a mother with seven sons will be bereaved of them all.</ul></ol></ol></ol>
 <dt>V. Jeremiah Laments... <a href="jer15.htm#10" target="lwr_lt">15:10-18</a><dd><ol type="A">
 <li>The offensiveness of his message of judgment. v.10<ul>
 <li>The messenger had become an object of controversy and hatred.</ul>
@@ -59,18 +59,18 @@ The 'four kinds' of <a href="jer15.htm#3" target="lwr_lt">v.3</a>, may refer to 
 <li>But the Lord would give the remnant favor in the eyes of their captors (v.11).</ul>
 <li>The reproach of identification with the Lord and His Word (v.15,16)<ul>
 <li>I have suffered rebuke - ie., I have borne reproach and scorn. 
-<li>I am called by Thy Name - The people who ridiculed Jeremiah claimed to be God's people, identified with His Name (eg., <a href="jer7.htm#4">Jer 7:4</a>). But they were not receptive or obedient to His Word (eg., <a href="jer7.htm#28">Jer 7:28</a>). Therefore, they rejected the Lord's representative (cp. <a href="1sam8.htm#7">1Sam 8:7</a>; <a href="mat10.htm#24">Mat 10:24,25,40</a>; <a href="joh15.htm#20">Joh 15:20;21</a>).
-<li>Thy Words were found and I did eat them... - As soon as the Book of the Law was rediscovered in the Temple (<a href="2kin22.htm#8">2Kin 22:8</a>), Jeremiah's appetite had been whetted. God's children hunger for His Word that they might know Him and serve Him aright. True believers find God's Word sweet... and also bitter... for as they draw near to God, they are moved to grieve over sin, and for their neighbors who are willfully ignorant of the coming judgment. (cp. <a href="eze3.htm#1">Eze 3:1-7</a>; <a href="eze2.htm#9">2:9,10</a>; <a href="rev10.htm#9">Rev 10:9</a>)</ul>
-<li>The Separation of Indignation against sin, v.17. cp. <a href="psa1.htm#1">Psa 1:1</a>; <a href="psa26.htm#5">26:5</a>; <a href="2cor6.htm#17">2Cor 6:17</a>; <a href="jer13.htm#17">Jer 13:17</a>; <a href="lam3.htm#28">Lam 3:28</a><dd>Indignation is righteous anger.
+<li>I am called by Thy Name... -<dd>The people who ridiculed Jeremiah claimed to be God's people, identified with His Name (eg., <a href="jer7.htm#4">Jer 7:4</a>). But they were not receptive or obedient to His Word (eg., <a href="jer7.htm#28">Jer 7:28</a>). Therefore, they rejected the Lord's representative (cp. <a href="1sam8.htm#7">1Sam 8:7</a>; <a href="mat10.htm#24">Mat 10:24-25,40</a>; <a href="joh15.htm#20">Joh 15:20;21</a>).</dd>
+<li>Thy Words were found and I did eat them... -<dd>As soon as the Book of the Law was rediscovered in the Temple (<a href="2kin22.htm#8">2Kin 22:8</a>), Jeremiah's appetite had been whetted. God's children hunger for His Word that they might know Him and serve Him aright. True believers find God's Word sweet... and also bitter... for as they draw near to God, they are moved to grieve over sin, and for their neighbors who are willfully ignorant of the coming judgment. (cp. <a href="eze3.htm#1">Eze 3:1-7</a>; <a href="eze2.htm#9">2:9,10</a>; <a href="rev10.htm#9">Rev 10:9</a>)</dd></ul>
+<li>The Separation of Indignation against sin, v.17. cp. <a href="psa1.htm#1">Psa 1:1</a>; <a href="psa26.htm#5">26:5</a>; <a href="2cor6.htm#17">2Cor 6:17</a>; <a href="jer13.htm#17">Jer 13:17</a>; <a href="lam3.htm#26">Lam 3:26-28</a><dd>Indignation is righteous anger.</dd>
 <li>The Disappointment of unanswered prayer, v.18.
-<dd>Despite Jeremiah's continual intercession, the people had not responded to the message. As the drought continued unabated,  Jeremiah's thirst intensified (cp. <a href="psa63.htm#1">Psa 63:1,2</a>).</ol>
-<dd>The Lord answers Jeremiah as a representative of the believing remnant (<a href="jer15.htm#19" target="lwr_lt">15:19-21</a>), addressing each complaint (in reverse order).<dl><dl>
+<dd>Despite Jeremiah's continual intercession, the people had not responded to the message. As the drought continued unabated,  Jeremiah's thirst intensified (cp. <a href="psa63.htm#1">Psa 63:1,2</a>).</dd></ol>
+<dd>The Lord answers Jeremiah, as a representative of the believing remnant (<a href="jer15.htm#19" target="lwr_lt">15:19-21</a>), addressing each complaint (in reverse order).</dt><dl></dt><dl>
 <dt>D. Return to the place of trusting Me fully... (19a). cp. <a href="zech3.htm#7">Zech 3:7</a>; <a href="heb10.htm#35">Heb 10:35-39</a>
 <dd>I will bring thee again... (from the place of trouble and captivity, v.11-15)
 <dt>C. Continue living separated unto Me, and from sin... (19b). cp. <a href="luk21.htm#34">Luke 21:34-36</a>; <a href="jude1.htm#24">Jude 1:24</a>
 <dd>I will make thee to stand for Me... 
 <dt>B. Speak My Word faithfully... (19c-20a). cp. <a href="gal1.htm#10">Gal 1:10</a>
-<dd>I am with thee to save and deliver...- The antidote for &quot;Woe is me...&quot; (v.10) is &quot;I am with thee.&quot;
+<dd>I am with thee to save and deliver...- The antidote for &quot;Woe is me...&quot; (<a href="jer15.htm#10" target="lwr_lt">v.10</a>) is &quot;I am with thee.&quot;
 <dt>A. Do not Yield to those who oppose you (19c-21). cp. <a href="isa41.htm#10">Isa 41:10-13</a>; <a href="php1.htm#27">Php 1:27-29</a>
 <dd>I will deliver... I will redeem thee...
 </dl></dl></dl>
