--- a/www/the_book/jer40n42.htm
+++ b/www/the_book/jer40n42.htm
@@ -1,58 +1,57 @@
 <html>
 <head>
-<title>Jeremiah 40 - 42 Notes</title>
- <base target="lwr_rt"> </head>
+<title>Jeremiah 40 - 43:7 Notes</title>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
-<b><a href="jer40.htm#1" target="lwr_lt">Jeremiah 40 - 42</a> - <a href="jer_menu.htm" target="lwr_lt">Outline of Jeremiah </b>(MENU page)</a><br>
-<dl><dt><b>Jeremiah's ministry in Judah following the Fall of Jerusalem,</b> ch. 40-42<br>
+<b><a href="jer40.htm#1" target="lwr_lt">Jeremiah 40 - 43:7</a> - <a href="jer_menu.htm" target="lwr_lt">Outline of Jeremiah </b>(MENU page)</a><br>
+<dl><dt><b>Jeremiah's ministry in Judah following the Fall of Jerusalem,</b> ch. 40- 43:7<br>
 <dt>I.The governorship of Gedaliah, ch. 40<ol type="A">
 <li>Jeremiah's liberty assured, <a href="jer40.htm#1" target="lwr_lt"><b>40:</b>1-6</a><ul>
-<li>&quot;The word that came to Jeremiah from the Lord...&quot; (v.1) is disclosed in ch. 42. The intervening chapters (40,41) lay the background for that word.
-<li>Jeremiah was among the captives brought in chains to Ramah (see <a href="jer_menu.htm" target="lwr_lt">Book Notes</a> discussion at <a href="jer39.htm#11">39:11-14</a>).
-<li>The heathen prince saw clearly the cause of Judah's fall, in contrast to their blindness (<a href="jer40.htm#2" target="lwr_lt">v.2,3</a>).
+<li>&quot;The word that came to Jeremiah from the Lord...&quot; (v.1) is disclosed in ch. 42.<dd>The intervening chapters (40,41) lay the background for that word.</dd>
+<li>Jeremiah was among the captives brought in chains to Ramah (see <a href="jer39.htm#11">39:11-14</a>).<dd>Nebuchadnezzar had given instructions that Jeremiah should be treated well (39:11,12). Provision was made (39:13) that he should remain with Gedaliah (the newly appointed governor, 40:5). Meanwhile, he dwelt among the people awaiting deportation (39:14). In the confusion of the deportation, the soldiers took him in chains among the captives to Ramah, where the officials identified and released him according to Nebuchadnezzar's instructions (40:1-6). Ramah, five miles north of Jerusalem, was used as a staging area for the deportation (cp. <a href="jer31.htm#15">31:15-17</a>). [This paragraph was copied and adapted from the Notes at 39:11-14]</dd>
+<li>The heathen prince saw clearly the cause of Judah's fall, in contrast to Israel's blindness (<a href="jer40.htm#2" target="lwr_lt">v.2,3</a>).
 <li>Jeremiah was given his liberty and the option of going to Babylon or of remaining in Judah.
 <li>He opted to join himself to Gedaliah, the governor appointed by Nebuchadnezzar.</ul>
-<li>Gedaliah's rule accepted, <a href="jer40.htm#7" target="lwr_lt">v.7-12</a><dd>
-In addition to the poor of the land (<a href="jer39.htm#10">39:10</a>) who had been left under Gedaliah's rule, the many bands of Jews who had been scattered to neighboring countries for fear of the Babylonian army, also joined themselves to him. They were assured that life under the Babylonians would be peaceful and prosperous.</ol>
+<li>Gedaliah's rule accepted, <a href="jer40.htm#7" target="lwr_lt">v.7-12</a><dd>In addition to the poor of the land (<a href="jer39.htm#10">39:10</a>) who had been left under Gedaliah's rule, the many bands of Jews who had been scattered to neighboring countries for fear of the Babylonian army, also joined themselves to him. They were assured that life under the Babylonians would be peaceful and prosperous.</dd><dd>Gedaliah governed the land from Mizpah, which was about 10 miles northwest of Jerusalem.</dd></ol>
 <dt>II. The treachery of Ishmael the son of Nethaniah, 40:13- 41:10<ol type="A">
-<li>Gedaliah's rejection of sound counsel, <a href="jer40.htm#13" target="lwr_lt">40:13-16</a><dd><dd>
-He did not believe the accusation, which proved true. This reminds us that the confusion and needless turmoil, recorded in ch. 41, was a continuation of the fallout from Zedekiah's unbelief (<a href="jer38.htm#17">38:17,18</a>). Would things have been different if Gedaliah had enquired of the Lord?
-<li>The murder of Gedaliah, <a href="jer41.htm#1" target="lwr_lt"><b>41:</b>1,2</a><dd>
-Ishmael was &quot;of the seed royal&quot; (ie., related to the Davidic kings). He was moved, by jealousy and ungodly patriotism, to take revenge against the governor appointed by Nebuchadnezzar.
-<li>The murder of all the Jews with Gedaliah (<a href="jer41.htm#3" target="lwr_lt">v.3</a>)- Motive: to eliminate those allied with Gedaliah.
+<li>Gedaliah's rejection of sound counsel, <a href="jer40.htm#13" target="lwr_lt">40:13-16</a><dd>
+Gedaliah was warned that Ishmael was preparing to assasinate him. He did not believe the accusation, which proved true. The removal of Gedaliah's leadership would produce the confusion and needless turmoil, recorded in ch. 41. This confusion was a continuation of the fallout from Zedekiah's unbelief (<a href="jer38.htm#17">38:17,18</a>). Would things have been different if Gedaliah had enquired of the LORD?</dd>
+<li>The murder of Gedaliah, <a href="jer41.htm#1" target="lwr_lt"><b>41:</b>1,2</a><dd>Ishmael was &quot;of the seed royal&quot; (ie., related to the Davidic kings). He was moved, by jealousy and ungodly patriotism (and further incited by the king of the Ammonites, who desired to expand into the vacuum left by Judah's captivity, <a href="jer40.htm#14">40:14</a>), to take revenge against the governor appointed by Nebuchadnezzar.</dd>
+<li>The murder of all the Jews with Gedaliah (<a href="jer41.htm#3" target="lwr_lt"><b>41:</b>3</a>)- Motive: to eliminate those allied with Gedaliah.
 <li>The murder of 70 out of 80 worshipers, who mourned the destruction of Jerusalem. (<a href="jer41.htm#4" target="lwr_lt">v.4-9</a>)<ul>
-<li>They came in mourning, carrying offerings, from Shiloh (Israel's first center of worship in the land, long ago destroyed), enroute to the house of the Lord (or, rather to the site of the Temple, recently destroyed). cp. <a href="jer7.htm#12">Jer 7:12-14</a>
-<li>Motive for their murder: perhaps to prevent the spread of news about the previous murders.
-<li>The pit, into which the bodies were cast, was made by Asa, King of Judah, 365 years earlier, when he feared the military incursions of Baasha, King of Israel. Baasha had built Ramah as a military outpost on the border between the northern and southern kingdoms. Asa destroyed Ramah and used its materials to build Mizpah nearby (<a href="1kin15.htm#22">1Kin 15:22</a>). Here again, the motivation was fear, and the destruction was needless.</ul>
+<li>The reason for their mourning -<dd>These men were bringing offerings {HB=minchah, meal offering, food offering} from towns which once had belonged to the northern kingdom of Israel (until the Assyrian conquest and captivity, about 100 years earlier). They may have been enroute to the Temple in Jerusalem, when they heard of its destruction. It is more probable, that their gifts were intended to express allegiance to Gedaliah, as the appointed governor. Their sorrow for what had befallen Jerusalem was displayed in the external signs of mourning: shaved beards, torn clothing, cuts in their flesh (the latter was a heathen practice, not according to God's Word, <a href="deu14.htm#1">Deu 14:1</a>). They had stopped at Shiloh (the site where the Tabernacle had first been set up, after Joshua led the people across the Jordan and into the promised land). God's Word concerning the Temple had been fulfilled, for it was now in ruins, just as Shiloh had been for many years, and for the same reasons (cp. <a href="jer7.htm#12">Jer 7:12-14</a>; <a href="psa78.htm#55">Psa 78:55-60</a>). [Shiloh was about 15 miles north of Mizpah, and 20 miles north of Jerusalem.]</dd>
+<li>The motive for their murder - probably to prevent the spread of news about the previous murders.
+<li>The pit, into which the bodies were cast, was made by Asa, King of Judah, about 365 years earlier,<dd>when he feared the military incursions of Baasha, King of Israel. Baasha had built Ramah as a military outpost on the border between the northern and southern kingdoms. Asa destroyed Ramah and used its materials to build Mizpah nearby (<a href="1kin15.htm#22">1Kin 15:22</a>).</dd><dd>The needless destruction of Ramah had been motivated by fear, as was the needless murder of these men.</dd><dd>The construction materials from Ramah had been confiscated and repurposed, as were the possessions of the ten men of means, in exchange for their lives.</dd></ul>
 <li>The kidnap of the remaining Jews in Mizpah (<a href="jer41.htm#10" target="lwr_lt">v.10</a>)- Jeremiah was among these captives.</ol>
 <dt>III. The leadership of Johanan, 41:11- 43:7<ol type="A">
 <li>The deliverance from Ishmael, <a href="jer41.htm#11" target="lwr_lt">41:11-15</a><ul>
-<li>Occurred at the place where a civil war began that eventually secured David's reign, 670 years earlier (<a href="2sam2.htm#12">2Sam 2:12-17</a>). That war caused needless suffering because some rejected the king anointed of God.
+<li>Occurred at the place where a civil war had begun (about 470 years earlier), following the death of king Saul (<a href="2sam2.htm#12">2Sam 2:12-17</a>).<dd>The needless suffering, produced by that war, was caused by the rejection of the king anointed of God. Eventually, the whole nation accepted David as king.
 <li>Here again we see the arm of flesh:<ul>
-<li>Ishmael, the treacherous murderer, &quot;illustrates the ugliness of the flesh.&quot;
-<li>Johanan, the honorable deliverer, &quot;illustrates the unbelief of the flesh.&quot; [GWms]</ul></ul>
+<li>Ishmael, the treacherous murderer, &quot;illustrates the ugliness of the flesh.&quot; (v.1-10)
+<li>Johanan, the honorable deliverer, &quot;illustrates the unbelief of the flesh.&quot; (ch. 42,43)
+<dd>[in quotes, from GWms]</dd></ul></ul>
 <li>The preparation to flee to Egypt, <a href="jer41.htm#16" target="lwr_lt">41:16-18</a><dd>
-Preparations to depart were made at &quot;the habitation of Chimham,&quot; ie., on the parcel of land which David had awarded to the son of Barzillai, a man who had encouraged him at the time of Absalom's rebellion, 635 years earlier (<a href="2sam19.htm#37">2Sam 19:37,38</a>). That parcel of ground was granted upon the king's return, but now they were about to abandon the entire Land, because of their king's departure.
-<li>The enquiry of the Lord, <a href="jer42.htm#1" target="lwr_lt"><b>42:</b>1-6</a> - Observe their apparent sincerity:<ol type="1">
+Preparations to depart were made at &quot;the habitation of Chimham,&quot; ie., on the parcel of land which David had awarded to the son of Barzillai, a man who had encouraged him at the time of Absalom's rebellion, about 435 years earlier (<a href="2sam19.htm#37">2Sam 19:37,38</a>). That parcel of ground had been granted upon the king's return, but now they were about to abandon the entire Land, because of their king's departure.
+<li>The enquiry of the LORD, <a href="jer42.htm#1" target="lwr_lt"><b>42:</b>1-6</a> - Observe their apparent sincerity:<ol type="1">
 <li>They were of one accord &quot;from the least to the greatest&quot; (v.1).
 <li>They humbly asked the man of God to pray for them (v2a).
 <li>They acknowledged their weakness, &quot;we are left but few of many&quot; (v.2b).
-<li>They sought direction from the Lord &quot;wherein we may walk&quot; (v.3).
-<li>They promised to obey the Lord's instructions without question (v.5,6)- whether for good {ie., pleasant, agreeable, tending to prosperity} or for evil {ie., unpleasant, disagreeable, tending to distress and misery; cp. this word in <a href="jer41.htm#11">41:11</a> where the evil includes the harmful effects of Ishmael's actions, not just the sin that motivated them}.</ol>
-<li>The answer of the Lord, <a href="jer42.htm#7" target="lwr_lt">42:7-22</a><ul>
-<li>It's timing: Ten days later (v.7). - The Lord answers prayer in His time. Natural impatience must wait. Natural preparation and planning must give place to obedience, though it seems inconvenient and in conflict with fleshly wisdom.
+<li>They sought direction from the LORD &quot;wherein we may walk&quot; (v.3).
+<li>They promised to obey the LORD's instructions without question (v.5,6)- whether for good {ie., pleasant, agreeable, tending to prosperity} or for evil {ie., unpleasant, disagreeable, tending to distress and misery; cp. this word in <a href="jer41.htm#11">41:11</a> where the 'evil' includes the harmful effects of Ishmael's actions, not just the sin that motivated them}.</ol>
+<li>The answer of the LORD, <a href="jer42.htm#7" target="lwr_lt">42:7-22</a><ul>
+<li>It's timing: Ten days later (v.7). - The Lord answers prayer in His time. Natural impatience must wait.<dd>Natural preparation and planning must give place to obedience, though it seems inconvenient and in conflict with fleshly wisdom.</dd>
 <li>The message offered two options:<ol type="1">
-<li>Remain in the Land to enjoy blessing (v.10-12)- The basis of this blessing: &quot;I will...&quot; (3x), &quot;I am with thee to save... to deliver...&quot; The LORD would bless them if they would trust Him and obey.
-<li>Flee into Egypt to suffer sword and famine (v.13-19)- The LORD commanded them to stay in the Land, and warned them of the consequences of disobedience. Which path would they choose? Yet, in their hearts, they had already made their choice.</ol>
-<li>The Lord, who searches the hearts, revealed their hypocrisy to Jeremiah (v.20-22; cp. <a href="jer17.htm#9">17:9,10</a>)- Though they had seemed so sincere, at the time they requested prayer, they &quot;dissembled&quot; {the HB word here means: wandered, staggered} in their hearts (cp. <a href="jam1.htm#5">Jam 1:5-8</a>; <a href="rom4.htm#20">Rom 4:20</a>). They wanted God to bless their plans, and were unwilling to submit to His instructions. Instead of the blessing which would have accompanied the obedience of faith, judgment was pronounced upon them for their unbelief.</ul>
-<li>The rejection of the Lord's counsel, <a href="jer43.htm#1" target="lwr_lt"><b>43:</b>1-7</a><ul>
-<li>Their false accusation against Jeremiah- They accused Jeremiah of speaking falsely, contrary to their prior expression of confidence in him (<a href="jer42.htm#1">42:1-6</a>), and even though they had seen his 40 years of prophetic warnings proven true by recent events.
-<li>Their false accusation against Baruch- They accused Baruch of influencing Jeremiah against them, in behalf of the Babylonian enemy.
-<li>Their fear of Nebuchadnezzar displaced their fear of, and faith in, the Lord.
-<li>Their willful journey into Egypt- They took all those who had returned to dwell in Judah, and the people who had been committed to Gedaliah's care, to Egypt. Among their unwilling captives were Jeremiah and Baruch.</ul></ol>
-</dl>
+<li>Remain in the Land to enjoy blessing (v.10-12)-<dd>The basis of this blessing: &quot;I will...&quot; (3x), &quot;I am with thee to save... to deliver...&quot;</dd><dd>The LORD would bless them if they would trust Him and obey.</dd>
+<li>Flee into Egypt to suffer sword and famine (v.13-19)-<dd>The LORD commanded them to stay in the Land, and warned them of the consequences of disobedience.</dd><dd>Which path would they choose? Yet, in their hearts, they had already made their choice.</dd></ol>
+<li>The Lord, who searches the hearts, revealed their hypocrisy to Jeremiah (v.20-22; cp. <a href="jer17.htm#9">17:9,10</a>).-<dd>Though they had seemed so sincere, at the time they requested prayer, they &quot;dissembled&quot; {the HB word means: wandered, staggered} in their hearts (cp. <a href="jam1.htm#5">Jam 1:5-8</a>; <a href="rom4.htm#20">Rom 4:20</a>). They wanted God to bless their plans, and were unwilling to submit to His instructions. Instead of the blessing which would have accompanied the obedience of faith, judgment was pronounced upon them for their unbelief.</dd></ul>
+<a name="43:1-7"></a><li>The rejection of the Lord's counsel, <a href="jer43.htm#1" target="lwr_lt"><b>43:</b>1-7</a><ul>
+<li>Their false accusation against Jeremiah -<dd>Contrary to their prior expression of confidence in him (<a href="jer42.htm#1">42:1-6</a>), they accused Jeremiah of speaking falsely, even though they knew that the prophetic warnings, which he had faithfully delivered for more than 40 years, had been proven true by recent events.</dd>
+<li>Their false accusation against Baruch -<dd>They accused Baruch, Jeremiah's scribe, of influencing him against them, in behalf of the Babylonian enemy.</dd>
+<li>Their fear of Nebuchadnezzar displaced their fear of, and faith in, the LORD.
+<li>Their willful journey into Egypt -<dd>They took all those who had returned to dwell in Judah, and the people who had been committed to Gedaliah's care, to Egypt. Among their unwilling captives were Jeremiah and Baruch.</dd>
+<dd>In the next verse, the account continues, following their arrival in Egypt.</ul></ol></dl>
 <hr width=60% align=center size=1>
-<center>Click here to continue the study in <a href="jer43n44.htm" target="upper">Jeremiah 43 - 44</a>
+<center>Click here to continue the study in <a href="jer43n44.htm" target="upper">Jeremiah 43:8 - 44:30</a>
 <br>Return to <a href="jer_menu.htm" target="lwr_lt">Jeremiah - MENU page</a>.<br>
 <p><a href="help_mnu.htm#copyrt" target="lwr_lt">Limited permission is granted</a> to copy &amp; distribute these notes from <a href="help_mnu.htm#contact" target="lwr_lt">www.theBookWurm.com</a></center>
 <hr width=60% align=center size=1>
