--- a/www/the_book/jer50n51.htm
+++ b/www/the_book/jer50n51.htm
@@ -1,74 +1,82 @@
 <html>
 <head>
 <title>Jeremiah 50 - 51 Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="jer50.htm#1" target="lwr_lt">Jeremiah 50 - 51</a> - <a href="jer_menu.htm" target="lwr_lt">Outline of Jeremiah </b>(MENU page)</a><br>
 <dl><dt><b>Judgment upon Gentile nations: concerning Babylon</b> (ch. 50,51)
-<dd>The divisions below depict the overthrow of Babylon, visavis the restoration of Israel.<br>
+<dd>The divisions below depict the overthrow of Babylon, in contrast with the restoration of Israel.<br>
 <dt>I. Announcement to the nations: Babylon will be destroyed; Israel will be restored, <a href="jer50.htm#1" target="lwr_lt"><b>50:</b>1-7</a><ul>
 <li>Babylon is taken {captured}
-<li>her idols are confounded {lit., "withered"; Their lifelessness has become evident.}- Bel {Babylonian variation of "Baal"} and Merodach were among those idols.
-<li>out of the north- Babylon would fall to the Medes whose land was northeast of Babylon and north of Persia.
+<li>her idols are confounded {lit., &quot;withered&quot;; Their lifelessness has become evident.}-<dd>Bel {Babylonian variation of &quot;Baal&quot;} and Merodach were among those idols.</dd>
+<li>out of the north...- Babylon would fall to the Medes whose land was northeast of Babylon and north of Persia.
 <li>in those days... in that time (v.4,5)- The prophecy looks beyond restoration under Ezra, to the end of the age.<dd>
 In that future restoration, Israel...<ul>
-<li>will seek the Lord with their whole heart, <a href="jer29.htm#12">29:12-14</a>
-<li>and be joined to the Lord in a perpetual covenant, <a href="jer31.htm#31">31:31-34</a></ul>
+<li>will seek the LORD with their whole heart, <a href="jer29.htm#12">29:12-14</a>
+<li>and be joined to the LORD in a perpetual covenant, <a href="jer31.htm#31">31:31-34</a></ul>
 <li>Until then, Israel continues in its desolate condition (v.6,7)-<ul>
 <li>the enemy within:<ul>
 <li>lost sheep (cp. <a href="mat9.htm#36">Mat 9:36</a>; <a href="mat10.htm#6">10:6</a>; <a href="mat15.htm#24">15:24</a>; <a href="mat18.htm#11">18:11-13</a>; <a href="isa53.htm#6">Isa 53:6</a>)
 <li>foolish shepherds, <a href="jer10.htm#21">Jer 10:21</a>; <a href="jer23.htm#11">23:11</a>; <a href="isa56.htm#10">Isa 56:10,11</a>; <a href="eze34.htm#4">Eze 34:4-12</a>
 <li>turned away on the mountains (ie., to false gods in the high places), <a href="jer3.htm#6">Jer 3:6,23</a>
-<li>forgot their restingplace (ie., the Lord). <a href="psa32.htm#7">Psa 32:7</a>; <a href="psa116.htm#7">116:7</a>; <a href="isa30.htm#15">Isa 30:15</a>; <a href="isa32.htm#2">32:2</a>; <a href="mat11.htm#28">Mat 11:28</a></ul>
-<li>the enemies without are emboldened and justified by Israel's sin and rebellion against the Lord.</ul></ul>
+<li>forgot their restingplace (ie., the LORD). <a href="psa32.htm#7">Psa 32:7</a>; <a href="psa116.htm#7">116:7</a>; <a href="isa30.htm#15">Isa 30:15</a>; <a href="isa32.htm#2">32:2</a>; <a href="mat11.htm#28">Mat 11:28</a></ul>
+<li>the enemies without are emboldened and justified by Israel's sinful rebellion against the LORD.</ul></ul><dt>&nbsp;
 <dt>II. Warning to those in the region: Babylon will be scattered; Israel will be regathered, <a href="jer50.htm#8" target="lwr_lt">50:8-20</a><ul>
-<li>Those who heed God's Word have time to flee from the impending destruction of Babylon (cp. <a href="luk21.htm#20">Luk 21:20,21</a>; <a href="rev18.htm#4">Rev 18:4</a>). This final destruction comes, not from a single northern nation (v.3), but from an assembly of northern nations (v.9), whose weapons always hit their mark (perhaps a preview of the "smart bombs" of our era).
+<li>Those who heed God's Word have time to flee from the impending destruction of Babylon (v.8; cp. <a href="luk21.htm#20">Luk 21:20,21</a>; <a href="rev18.htm#4">Rev 18:4</a>).<dd>This final destruction comes, not from a single northern nation (v.3), but from an assembly of northern nations (v.9), whose weapons always hit their mark (perhaps a preview of the &quot;smart bombs&quot; of our era).</dd>
 <li>The cause Babylon's destruction:<ul>
-<li>The Lord's wrath: they destroyed the Lord's heritage (v.11-13). This wrath is upon the allied nations who had joined Babylon, their "mother", in the destruction of Judah.
-<li>The Lord's vengeance: they will be treated as they treated Israel (v.14-16).
-<li>The Lord will scatter them as they scattered His people, and punish them as Assyria had already been punished for the same crime, at the hand of Babylon (v.17,18).</ul> 
-<li>The Lord will regather Israel (v.19,20):<ul>
-<li>in those days... in that time...- Israel will be free from iniquity (cp. <a href="zech13.htm#1">Zech 13:1</a>). Again, this looks to the end of the age.</ul></ul>
+<li>The LORD's wrath: they destroyed the Lord's heritage (v.11-13).<dd>This wrath is upon the allied nations who had joined Babylon, their &quot;mother,&quot; in the destruction of Judah.</dd>
+<li>The LORD's vengeance: they will be treated as they treated Israel (v.14-16).
+<li>The LORD will scatter them as they scattered His people, and punish them as Assyria had already been punished for the same crime, at the hand of Babylon (v.17,18).</ul> 
+<li>The LORD will regather Israel (v.19,20):<ul>
+<li>in those days... in that time...- Israel will be free from iniquity (cp. <a href="zech13.htm#1">Zech 13:1</a>).<dd> Again, this looks to the Day of the LORD, at the end of the age.</ul></ul><dt>&nbsp;
 <dt>III. Instruction to the Medes from Israel's Redeemer: Waste Babylon for her excess zeal in oppressing Israel, <a href="jer50.htm#21" target="lwr_lt">50:21-34</a><ul>
 <li>Go up against the land...(v.21-23) - cp. <a href="isa13.htm#17">Isa 13:17-20</a><ul>
-<li>... against the land of Merathaim {lit., &quot;doubly rebellious&quot;} - The Lord had used Babylon as His hammer to punish Israel and the nations (v.23; cp. <a href="jer51.htm#21">51:21-24</a>; <a href="isa14.htm#5">Isa 14:5,6</a>). But they had gone beyond to destroy His Temple and to exalt themselves above Him. cp. v.28,29; <a href="isa47.htm#10">Isa 47:10</a><dd>Here also, is a foreview of Babylon, the world system at the end of the age, whose ultimate head exalts himself beyond measure. <a href="2the2.htm#3">2The 2:3,4</a>; <a href="isa14.htm#12">Isa 14:12-15</a>
-<li>... against the inhabitants of Pekod {lit., "visitation" or "punishment}, a region of Assyria with Nineveh as its capital, now occupied by Babylon.</ul>
+<li>... against the land of Merathaim {lit., &quot;doubly rebellious&quot;} -<dd>The Lord had used Babylon as His hammer to punish Israel and the nations (v.23; cp. <a href="jer51.htm#20">51:20-24</a>; <a href="isa14.htm#5">Isa 14:5,6</a>). But they had gone beyond, to destroy His Temple and to exalt themselves above Him. cp. v.28,29; <a href="isa47.htm#10">Isa 47:10</a></dd><dd>&nbsp; &nbsp; &nbsp;Here also, is a foreview of Babylon, the world system at the end of the age, whose ultimate head (ie., Satan indwelling the antichrist) exalts himself beyond measure. <a href="2the2.htm#3">2The 2:3,4</a>; <a href="isa14.htm#12">Isa 14:12-15</a></dd>
+<li>... against the inhabitants of Pekod {lit., &quot;visitation&quot; or &quot;punishment&quot;}, a region of Assyria with Nineveh as its capital, which was occupied by Babylon prior to the fall of Jerusalem.</ul>
 <li>I have laid a snare... thou wast not aware (v.24)<dd>
-The Medes took Babylon while its rulers partied, thinking themselves secure in their fortifications, they further defiled the name of the LORD (<a href="dan5.htm#1">Dan 5:1-5</a>). As Daniel explained, the handwriting on the wall declared that the LORD was about to judge them for their excesses (<a href="dan5.htm#17">Dan 5:17-28</a>; cp. <a href="isa47.htm#5">Isa 47:5,6</a>; <a href="zech1.htm#15">Zech 1:15</a>). The Medes diverted the Euphrates River which flowed beneath the walls of the city. Once the channel was dry they had easy access to the heart of the city, and rapidly took control (<a href="dan5.htm#30">Dan 5:30,31</a>). The success of the Medes' invasion is foretold in v.25-32.<br>Bel-Shazzar's name means "Bel, protect the king." (cp. <a href="jer50.htm#2" target="lwr_lt">v.2</a>; <a href="jer51.htm#44">51:44</a>).
-<li>Israel's Redeemer deals with those who oppress His people. (<a href="jer50.htm#33" target="lwr_lt">v.33,34</a>)</ul>
+The Medes took Babylon while its rulers partied, thinking themselves secure in their fortifications, they further defiled the name of the LORD (<a href="dan5.htm#1">Dan 5:1-5</a>). As Daniel explained, the handwriting on the wall declared that the LORD was about to judge them for their excesses (<a href="dan5.htm#17">Dan 5:17-28</a>; cp. <a href="isa47.htm#5">Isa 47:5,6</a>; <a href="zech1.htm#15">Zech 1:15</a>). The Medes diverted the Euphrates River which flowed beneath the walls of the city. Once the channel was dry they had easy access to the heart of the city, and rapidly took control (<a href="dan5.htm#30">Dan 5:30,31</a>). The success of the Medes' invasion is foretold in v.25-32.<br>&nbsp; &nbsp; &nbsp;The name of Babylon's last king, Bel-Shazzar, means &quot;Bel, protect the king.&quot; But Bel, like all other false gods, could not stand before the LORD (cp. <a href="jer50.htm#2" target="lwr_lt">v.2</a>; <a href="jer51.htm#44">51:44</a>).
+<li>Israel's Redeemer deals with those who oppress His people. (<a href="jer50.htm#33" target="lwr_lt">v.33,34</a>)</ul><dt>&nbsp;
 <dt>IV. Description of Babylon's overthrow, and its reason: For Israel hath not been forsaken of his God, <a href="jer50.htm#35" target="lwr_lt">50:35- 51:5</a><ol type="1">
-<li>The overwhelming defeat of Babylon<ul>
+<li>The overwhelming defeat of Babylon, by means of...<ul>
 <li>a sword upon her people, princes....<ul>
-<li>her wise men would become liars and they shall dote {ie., become foolish}...
+<li>her wise men would become liars {ie., devoid of truth} and they shall dote {ie., become foolish}...
 <li>her mighty men would be dismayed {ie., shattered, broken}.</ul>
-<li>a drought upon her waters (v.38) - perhaps indicating the Medes' method of entrance into the city.
-<li>a complete destruction, like that of Sodom and Gomorrah (v.39,40)<dd>The prophecy of such total destruction awaits fulfillment in the last days.
-<li>an irresistable enemy (v.41)-<ul>
-<li>cruel and powerful (v.41,42)
+<li>a drought upon her waters (50:38) - perhaps indicating the Medes' method of entrance into the city.
+<li>a complete destruction, like that of Sodom and Gomorrah (50:39,40)<dd>The prophecy of such total destruction awaits fulfillment in the last days.
+<li>an irresistable enemy (50:41)-<ul>
+<li>cruel and powerful (50:41,42)
 <li>causing the cruel and powerful of Babylon to cringe in fear (v.43)</ul>
-<li>an irrefutable purpose (v.44-46)-<dd>Nothing and no one can overturn the counsel of the LORD against Babylon. 
+<li>an irrefutable purpose (50:44-46)-<dd>Nothing and no one can overturn the counsel of the LORD against Babylon. 
 <li>a destroying wind (<a href="jer51.htm#1" target="lwr_lt"><b>51:</b>1-4</a>)- as Babylon had once been to Israel (<a href="jer4.htm#11">4:11-13</a>)</ul>
-<li>The faithfulness of the Lord to Israel (v.5) though their land was filled with sin {ie., trespass, or, compensation for trespass} against Him. [Though He allowed severe punishment to befall them, He had not forsaken them.]</ol>
-<dt>V. Futility of Babylon's resources, the sufficiency of Israel's Portion, <a href="jer51.htm#6" target="lwr_lt">51:6-19</a><ul>
+<li>The faithfulness of the LORD to Israel (51:5)...
+<dd>Though their land was filled with 'sin' {ie., trespass, or, compensation for trespass} against Him... He remained faithful to them.</dd><dd>Though He allowed severe punishment to befall them, He had not forsaken them.</dd></ol><dt>&nbsp;
+<dt>V. Futility of Babylon's resources, the sufficiency of Israel's Portion, <a href="jer51.htm#6" target="lwr_lt"><b>51:</b>6-19</a><ul>
 <li>Another warning to flee (v.6); cp. <a href="jer50.htm#8">50:8</a>; <a href="luk21.htm#20">Luk 21:20,21</a>; <a href="rev18.htm#4">Rev 18:4</a>
+<dd>Those who believe God's Word will heed His warning to escape the judgment which will fall upon Babylon. The first application is to the fall of Babylon, at the hands of the Medes and Persians. However, as the references above indicate, the warning echoes down through the centuries, with foreshadowings of the fall of Babylon the Great, in the Day of the LORD.</dd>
 <li>The insanity of the nations who partake of Babylon's errors (v.7; <a href="rev17.htm#1">Rev 17:1-4</a>; <a href="rev18.htm#3">18:3</a>)
-<li>Babylon's fall predicted (v.8; <a href="rev14.htm#8">Rev 14:8</a>; <a href="rev18.htm#2">18:2</a>) inspite of Futile measures to prevent collapse-<ul>
-<li>international attempts to heal her ills (v.9)- Even God's people cannot change the godless world. Instead, their job is to proclaim the work of God in judgment and for salvation (v.10).
+<li>Babylon's fall is certain (v.8; <a href="rev14.htm#8">Rev 14:8</a>; <a href="rev18.htm#2">18:2</a>) inspite of futile measures to prevent collapse...<ul>
+<li>international attempts to heal her ills (v.9)- Even God's people cannot change the godless world.<dd>Instead, their job is to proclaim the work of God in judgment and for salvation (v.10).</dd>
 <li>military preparations against invasion (v.11,12); cp. <a href="rev19.htm#19">Rev 19:19</a>
-<li>misplaced confidence in materialism: trade and wealth (v.13)- The measure {ie., the limit, the extent} of thy covetousness (cp. <a href="rev18.htm#9">Rev 18:9-19</a>).
-<li>misplaced confidence in false spirituality: false gods (v.14-18)- The vanity {emptiness, nothing} of thy work of errors {delusions} (<a href="psa115.htm#4">Psa 115:4-8</a>).<br>Such humanly imagined 'powers' cannot thwart the purposes of the LORD {the One who Is, and was, and ever more shall be}, who created all things by His Word. He is...</ul>
-<li>The Portion of Jacob {Israel} is not like them (<a href="psa115.htm#1">Psa 115:1-3</a>; <a href="jer10.htm#16">Jer 10:16</a>; <a href="psa16.htm#5">Psa 16:5</a>; <a href="psa73.htm#26">73:26</a>; <a href="lam3.htm#24">Lam 3:24</a>)</ul>
+<li>misplaced confidence in populism (v.13a) - 
+<dd>In the near view, 'many waters' might refer to the river which flowed through the city of Babylon.</dd>
+<dd>However, in <a href="rev17.htm#15">Rev 17:15</a>, the waters are identified as the &quot;peoples... multitudes... nations, and tongues,&quot; upon which the system called 'mystery Babylon' sits.</dd>
+<li>misplaced confidence in materialism: trade and wealth (v.13b)-
+<dd>&quot;...abundant... treasures... the measure {ie., the limit, the extent} of thy covetousness...&quot; (cp. <a href="rev18.htm#9">Rev 18:9-19</a>).</dd>
+<li>misplaced confidence in false spirituality: false gods (v.14-18)-
+<dd>The vanity {emptiness, nothing} of thy work of errors {delusions} (<a href="psa115.htm#4">Psa 115:4-8</a>).</dd><dd>No 'powers,' invented by man, can thwart the purposes of the LORD {the One who Is, and was, and ever more shall be}, who created all things by His Word. He is...</ul>
+<li>The Portion of Jacob {Israel} is not like them (<a href="psa115.htm#1">Psa 115:1-3</a>; <a href="jer10.htm#16">Jer 10:16</a>; <a href="psa16.htm#5">Psa 16:5</a>; <a href="psa73.htm#26">73:26</a>; <a href="lam3.htm#24">Lam 3:24</a>).
+<dd>The God of Israel is the living God, the Creator of all things. From Him, Israel sprouted, as the 'rod of His inheritance.'</dd><dd>He will deal with Israel's enemies.</dd></ul><dt>&nbsp;
 <dt>VI. Vengeance upon Babylon, at the hand of Israel's King, <a href="jer51.htm#20" target="lwr_lt">51:20-58</a><ul>
-<li>Although Babylon had once been used of the LORD in judging other nations (eg., 'my battle axe...'), He would now judge them, bringing them down from their exalted position and power (v.20-25). Their judgment would be complete. Not a stone would be salvaged (v.26), regardless of how high or strong they built their wall (v.53). The wall of Babylon was 300 feet tall and 90 feet wide at its top and sixty miles in circumferance. It boasted huge brazen gates and hundreds of towers for defense. Yet, all of their preparations were wasted, whether they labored to lift rock for the walls, or at the smelter's fires to build gates of brass (v.58). Their drunken feast would be terminated in the sleep of death (v.38-40), when the Medes suddenly swarmed in, surprising the defenders, filling the passage ways of the city, taking the city from both sides before word of the invasion could reach the commanders (v.30-32).
-<li>The Lord will avenge His people and His city (v.35,36,46-52)</ul>
-VII. The Time and Certainty of the Prophecy, <a href="jer51.htm#59" target="lwr_lt">51:59-64</a><ul>
+<li>Although Babylon had been used of the LORD in judging other nations (eg., 'my battle axe...'), He would now judge them, bringing them down from their exalted position and power (v.20-25).
+<li>Their judgment would be complete.<dd>Not a stone would be salvaged (v.26), regardless of how high or strong they built their wall (v.53). The wall of Babylon was 300 feet tall and 90 feet wide at its top and sixty miles in circumferance. It boasted huge brazen gates and hundreds of towers for defense. Yet, all of their preparations were wasted, whether they labored to lift rock for the walls, or at the smelter's fires to build gates of brass (v.58). Their drunken feast would be terminated in the sleep of death (v.38-40; <a href="dan5.htm#1">Dan 5:1-6,30-31</a>), when the Medes suddenly swarmed in, surprising the defenders, filling the passage ways of the city, taking the city from both sides, before word of the invasion could reach the commanders (v.30-32).
+<li>The Lord will avenge His people and His city (v.35,36,46-52)</ul><dt>&nbsp;
+<dt>VII. The Time and Certainty of the Prophecy, <a href="jer51.htm#59" target="lwr_lt">51:59-64</a><ul>
 <li>This prophecy was given in the fourth year of Zedekiah (v.59), seven years before the fall of Jerusalem.
-<li>The occasion was Zedekiah's journey to Babylon, perhaps to confirm again his allegiance to Nebuchadnezzar.
+<li>The occasion was Zedekiah's journey to Babylon, perhaps to reconfirm his allegiance to Nebuchadnezzar.
 <li>The messenger was Seraiah, the son of Neriah (and therefore, a brother of Baruch, <a href="jer45.htm#1">45:1</a>), a prince who accompanied the king on his journey.
-<li>His instructions were to read the prophecy against Babylon, and then cast it into the Euphrates (v.61-64).<ul>
+<li>His instructions were to read the prophecy against Babylon (ie., ch. 50,51), and then cast it into the Euphrates River (v.61-64).<ul>
 <li>The Word of God is sure, though swallowed up and forgotten in the overflowing flood of the Times of the Gentiles.
-<li>The sudden sinking of the scroll illustrates the sudden and complete fulfillment of God's Word regarding Babylon's final fall (cp. <a href="rev18.htm#21">Rev 18:21</a>).</ul></ul>
-</dl>
+<li>The sudden sinking of the scroll illustrates the sudden and complete fulfillment of God's Word regarding Babylon's final fall (cp. <a href="rev18.htm#21">Rev 18:21</a>).</ul></ul></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in <a href="jer52an.htm" target="upper">Jeremiah 52</a>
 <br>Return to <a href="jer_menu.htm" target="lwr_lt">Jeremiah - MENU page</a>.<br>
