--- a/www/the_book/jer_menu.htm
+++ b/www/the_book/jer_menu.htm
@@ -14,47 +14,49 @@
 <dt>A. Public Sermons (3 messages)--<ul><li>Delivered during the 5 years prior to discovery of the book the Law. (ch. 2-6)
 <li>Delivered during the cleansing of the Temple. (ch. 7-10)</ul>
 <ol type="1"><li>Twofold Condemnation of Judah for Unfaithfulness (<a href="jer2an.htm" target="upper">2:1-3:5</a>):<ol type="a">
-<li>Rejected Jehovah<li>Reared their own gods</ol>
+<li>They Rejected Jehovah.<li>They Reared their own gods.</ol>
 <li>Charge of Backsliding during the reign of Josiah (3:6- ch.6):<ol type="a">
 <li>A call for Repentance (<a href="jer3an.htm" target="upper">3:6-4:4</a>)
 <li>A preview of coming Judgment (<a href="jer4n6.htm" target="upper">4:5- ch. 6</a>)</ol>
-<li>Warning delivered in Gate of the Lord's House:<br>- - False Religion leads to Destruction (<a href="jer7n10.htm" target="upper">7-10</a>)</ol></ol>
+<li>Warning delivered in Gate of the Lord's House:<br>&nbsp; &nbsp; &nbsp;False Religion leads to Destruction (<a href="jer7n10.htm" target="upper">7-10</a>)</ol></ol>
 <dt>B. Discourses from Personal Experience (7 messages)--<ul><li>Delivered after the discovery of the book of the Law.</ul><ol type="1">
-<li>Israel disobeyed God's Covenant made in the wilderness:<br>- - Their Land will be made desolate. (<a href="jer11n12.htm" target="upper">11,12</a>)
-<li>Parable in Action - The Linen Girdle:<br>- - Judah's Pride will be brought to naught at the Euphrates. (<a href="jer13an.htm" target="upper">13</a>)
-<li>Drought & Famine foreshadow the coming Judgment:<br>- - God's Word sustains the few who feed upon it. (<a href="jer14n15.htm" target="upper">14,15</a>)
+<li>Israel disobeyed God's Covenant made in the wilderness:<br>&nbsp; &nbsp; &nbsp;Their Land will be made desolate. (<a href="jer11n12.htm" target="upper">11,12</a>)
+<li>Parable in Action - The Linen Girdle:<br>&nbsp; &nbsp; &nbsp; Judah's Pride will be brought to naught at the Euphrates. (<a href="jer13an.htm" target="upper">13</a>)
+<li>Drought & Famine foreshadow the coming Judgment:<br>&nbsp; &nbsp; &nbsp;God's Word sustains the few who feed upon it. (<a href="jer14n15.htm" target="upper">14,15</a>)
 <li>Jeremiah forbidden to Marry, Mourn or Feast (<a href="jer16n17.htm" target="upper">16:1-17:18</a>):<ul><li>Soon, sorrows, without consolation, must end Judah's joy, because they follow their own evil heart.<li>There is Hope only in the Lord, who alone can Heal the heart.</ul>
-<li>Message in the Gate of commerce (<i>17:19-27</i>):<br>- - Remember the Sabbath. (A test of heart inclination.)
+<li>Message in the Gate of commerce (<i>17:19-27</i>):<br>&nbsp; &nbsp; &nbsp;Remember the Sabbath. (A test of heart inclination.)
 <li>Lessons at the Potter's house (<a href="jer18n20.htm" target="upper">18,19</a>):<ol type="a">
 <li>The Lord is able to remake a people who yield to Him.
 <li>The Lord will break those who refuse to yield to Him.</ol>
-<li>Jeremiah's first Persecution (<i>20</i>):<br>- - Could not quench the fire of God's Word within him.</ol><br>
+<li>Jeremiah's first Persecution (<i>20</i>):<br>&nbsp; &nbsp; &nbsp;Could not quench the fire of God's Word within him.</ol><br>
 <dt><b><i>Book Two,</i></b> ch. 21-44		
 <dt><b>III. Prophecies during the reign of Zedekiah</b> (ch.21-29)<ol type="1">
 <li>Answer to Zedekiah regarding Nebuchadnezzar:<br>Captivity is unavoidable, apart from true repentance...<ol type="a"><li> As illustrated by the judgment upon the three preceding kings. (<a href="jer21n22.htm" target="upper">21-22</a>)
 <li>As illuminated by the future coming of The Righteous Branch in contrast to the present False Shepherds. (<a href="jer23n24.htm" target="upper">23</a>)</ul>
 <li>As revealed in the Vision of Two Baskets of Figs (<i>24</i>):<ul><li>The Lord discerns between the captives.<li>He will restore the Good, but not the Bad.<li>Zedekiah is among the Bad.</ul></ol>
 <li>Sentence of Judgment upon Judah and the nations (<a href="jer25an.htm" target="upper">25</a>):<ul><li>Revelation of Judah's 70 Years of Captivity:<br>Because they would not turn to Him or heed His Word, they would not return until His Word was accomplished.<li>Resolution of the Lord's controversy with the nations.</ul>
-<li>Message in the Temple Court during reign of Jehoiakim (<a href="jer26n28.htm" target="upper">26</a>):<ul><li>Conflict with the People</ul>
+<li>Message in the Temple Court (<a href="jer26n28.htm" target="upper">26</a>):<ul><li>Conflict with the People</ul>
 <li>Sign of the Yokes (<i>27,28</i>):<ul><li>Conflict with the False Prophets in Jerusalem</ul>
 <li>Message to First group of Captives re: duration of captivity (<a href="jer29an.htm" target="upper">29</a>):<ul><li>Conflict with the False Prophets already in exile.</ul></ol>
-<dt><b>IV. Prophecies re: Future of the 12 Tribes and Judah's near captivity</b> (ch. 30-39)<ol type="1">
+<dt><b>IV. Prophecies re: Future of the 12 Tribes and Judah's near captivity</b> (ch. 30-39)
+<br>&nbsp; &nbsp; &nbsp;(Messages delivered during the Final Siege of Jerusalem.)<ol type="1">
 <li>The coming Great Tribulation: the Time of Jacob's Trouble<ul><li>But he shall be saved out of it. (<a href="jer30n31.htm" target="upper">30</a>)</ul>
 <li>The coming Restoration &amp; Renewal of Israel & Judah:<ul><li>&quot;Behold, the days come that<b> I Will </b>. . . &quot; (<i>31</i>)</ul>
 <li>The future Restoration is Certain,<ul><li>as illustrated by Jeremiah's Purchase of Hanameel's Field. (<a href="jer32an.htm" target="upper">32</a>)</ul>
 <li>The future Restoration is Secured, by God's Covenants<ul><li>to be fulfilled in the Person of David's Righteous Branch. (<a href="jer33an.htm" target="upper">33</a>)</ul>
-<li>During the Final Siege of Jerusalem (<a href="jer34n36.htm" target="upper">34</a>):<ol type="a">
+<li>God's Word to Zedekiah (<a href="jer34n36.htm" target="upper">34</a>):<ol type="a">
 <li>Zedekiah's Captivity Foretold and described
-<li>Zedekiah's Covenant with the People Forsaken, just as they had turned from their covenant with God.</ol>
-<li>The Rechabites obey the word of their forefather,<ul><li>while Judah disregards the Word of God. (<i>35</i>)</ul>
-<li>Jehoiakim Destroys the written Word of God. (<i>36</i>)
+<li>The certainty of God's Word, illustrated by...<ul>
+<li>The people forsake Zedekiah's Covenant,<dd>just as they had forsaken their Covenant with God. (<i>34</i>)</dd>
+<li>The Rechabites obey the word of their forefathers,<dd>while Judah disregards the Word of God. (<i>35</i>)</dd>
+<li>Jehoiakim Destroyed the written Word of God,<dd>and suffered the consequences (<i>36</i>)</dd></ul></ol>
 <li>Jeremiah Imprisoned (<a href="jer37n38.htm" target="upper">37,38</a>):<ol type="a">
 <li>Responds to Zedekiah's request for prayer.
 <li>Counsels Zedekiah concerning God's Will (twice).</ol>
 <li>Judah Goes into Captivity, Jeremiah is Released from Prison. (<a href="jer39an.htm" target="upper">39</a>)</ol>
 <dt><b>V. Prophecies to the Remnant after the Destruction of Jerusalem...</b><ol type="1">
-<li>While they remained in the Land. (<a href="jer40n42.htm" target="upper">40-42</a>)
-<li>After they removed to Egypt. (<a href="jer43n44.htm" target="upper">43-44</a>)</ol><br>
+<li>While they remained in the Land. (<a href="jer40n42.htm" target="upper">40-43:7</a>)
+<li>After they removed to Egypt. (<a href="jer43n44.htm" target="upper">43:8- 44:30</a>)</ol><br>
 <dt><b><i>Appendices,</i></b> ch. 45-52		
 <dt><b>VI. Message to Baruch </b>(<a href="jer45an.htm" target="upper">45</a>)
 <dt><b>VII. Messages to the Nations:</b><ol type="1">
@@ -63,7 +65,7 @@
 <li>To Moab (<i>48</i>)
 <li>To Ammon, Edom, Damascus, Kedor, Hazor, and Elam (<a href="jer49an.htm" target="upper">49</a>)
 <li>To Babylon (<a href="jer50n51.htm" target="upper">50,51</a>)</ol>
-<dt><b>VIII. The Destruction of Jerusalem, in retrospect,</b><br>- - and in specific Fulfillment of Prophecy (<a href="jer52an.htm" target="upper">52</a>):<ol type="1">
+<dt><b>VIII. The Destruction of Jerusalem, in retrospect,</b><br>&nbsp; &nbsp; &nbsp;and in specific Fulfillment of Prophecy (<a href="jer52an.htm" target="upper">52</a>):<ol type="1">
 <li>The fate of Zedekiah
 <li>The fate of the City
 <li>The fate of the Temple
