--- a/www/the_book/lam2an.htm
+++ b/www/the_book/lam2an.htm
@@ -1,71 +1,68 @@
 <html>
 <head>
 <title>Lamentations 2 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="lam2.htm#1" target="lwr_lt">Lamentations 2</a> - <a href="lam_menu.htm" target="lwr_lt">Outline of Lamentations </b>(MENU page)</a><br>
 <dl><dt><b>The Lord's Actions against Jerusalem, due to His Righteous Anger,</b> ch. 2<dd>
-Jeremiah's first lamentation (ch. 1), described the desolation of the city, identified the cause of that desolation (&quot;Jerusalem hath grievously sinned,&quot; 1:8, ...&quot;the LORD is righteous,&quot; 1:18), and expressed unspeakable sorrow under the weight and consequences of that sin: &quot;Behold and see if there be any sorrow like unto my sorrow, wherewith the LORD hath afflicted me in the day of his fierce anger&quot; (1:12). It is the unimaginable thought of that last line upon which this second lamentation dwells. The LORD, Jehovah, the God who established and keeps His covenant with Israel, has caused her sorrow.
-<dt>I. The Lord's Actions against Jerusalem, <a href="lam2.htm#1" target="lwr_lt">2:1-10</a><dd><ol type="A">
-<li>were motivated by His anger [The word occurs twice in this verse.], v.1<ul>
+Jeremiah's first lamentation (ch. 1), described the desolation of the city... identified the cause of that desolation (&quot;Jerusalem hath grievously sinned,&quot; 1:8, &quot;the LORD is righteous,&quot; 1:18)... and expressed unspeakable sorrow under the weight and consequences of that sin:</dt><dl><dd> &quot;Behold and see if there be any sorrow like unto my sorrow,<dd>wherewith the LORD hath afflicted me in the day of his fierce anger&quot; (1:12).</dl><dd>It is the unimaginable thought, of that last line, upon which this second lamentation dwells. The LORD, Jehovah, the God who established and keeps His covenant with Israel, has caused her sorrow.
+<dt>I. The Lord's Actions against Jerusalem (<a href="lam2.htm#1" target="lwr_lt">2:1-10</a>)...<dd><ol type="A">
+<li>were motivated by His anger, v.1.- The word 'anger' occurs twice in this verse.<ul>
 <li>He covered them with a cloud (ie., of access denied, <a href="lam3.htm#44">Lam 3:44</a>; and of gloom and doom, <a href="joel2.htm#2">Joel 2:2</a>)
 <li>He cast down... the beauty of Israel (ie., the Temple, <a href="eze7.htm#20">Eze 7:20-22</a>)
-<li>He remembered not His footstool (ie., the Ark of the Covenant and its resting place, <a href="1chr28.htm#2">1Chr 28:2</a>; <a href="psa132.htm#1">Psa 132:1-10</a>)</ul>
+<li>He remembered not His footstool (ie., the resting place for the Ark of the Covenant, <a href="1chr28.htm#2">1Chr 28:2</a>; <a href="psa132.htm#1">Psa 132:1-10</a>)</ul>
 <li>against her habitations (the humble houses of shepherds and the strong fortresses of kings, alike), v.2a
 <li>against her political power, v.2b-3<ul>
-<li>He has cut off her horn {ie., power}, cp. <a href="psa75.htm#5">Psa 75:5,10</a>; <a href="psa132.htm#13">Psa 132:13-18</a>
 <li>He has polluted {ie., made profane or common, removed the honor of} the kingdom and its princes.
-<li>He has drawn back His right hand (with which He would have defended them, cp. <a href="psa74.htm#10">Psa 74:10,11</a>)</ul>
+<li>He has cut off her 'all her horn' {ie., the totality of the nation's power}. cp. <a href="psa75.htm#5">Psa 75:5,10</a>; <a href="psa132.htm#13">Psa 132:13-18</a>
+<li>He has withdrawn His right hand (with which He would have defended them, cp. <a href="psa74.htm#10">Psa 74:10,11</a>).</ul>
 <li>against her people, v.4,5 - cp. <a href="isa63.htm#10">Isa 63:10</a>; <a href="jer21.htm#5">Jer 21:5</a><ul>
 <li>He assaults and prevails against all, regardless of whether they dwell in tents or palaces.
-<li>He swallowed up {HB= bala; engulfed completely} Israel and the place of her abode.<br>[The word &quot;bala&quot; occurs in v.2, 5 (2x), 8 (&quot;destroying&quot;). It conveys the picture of a fire consuming everything (v.3). cp. <a href="jer52.htm#13">Jer 52:13</a>]</ul>
+<li>He swallowed up {HB= bala; engulfed completely} Israel and the place of her abode.<br>The word &quot;bala&quot; occurs in v.2, v.5 (2x), v.8 (&quot;destroying&quot;). It conveys the picture of a fire consuming everything (v.3). cp. <a href="jer52.htm#13">Jer 52:13</a></ul>
 <li>against His Temple, v.6,7<ul>
-<li>He has violently taken away His Tabernacle (ie., the Temple).<dd>
-The word used for Tabernacle here is HB= sok, which may be related to the HB word &quot;sukah&quot; meaning &quot;booth,&quot; or to the HB word &quot;suwk&quot; meaning &quot;hedge&quot;).<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If the meaning is &quot;booth,&quot; the Lord has removed the place of meeting {assembly} which He had established in the midst of His people, as easily as a farmer removes a temporary shelter used for shade, when the harvest is ended (cp. <a href="isa1.htm#8">Isa 1:8</a>).<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If the meaning is &quot;hedge,&quot; the Lord has turned the garden that He planted back to its natural state (cp. <a href="psa80.htm#12">Psa 80:12</a>; <a href="psa89.htm#40">89:40</a>; <a href="isa5.htm#5">Isa 5:5</a>).
-<li>He hath cast off His altar... He hath abhorred His sanctuary...- cp. <a href="isa1.htm#13">Isa 1:13-15</a>; <a href="jer7.htm#12">Jer 7:12-14</a>; Their religious activity was not according to His will. The church should take warning also (cp. <a href="rev2.htm#4">Rev 2:4,5</a>).
-<li>He hath given up into the hand of the enemy... - They (the enemy) make a noise in the Lord's House, as in the former days of Israel's feasts. But this is the sound, not of worship, but of demolition.</ul>
-<li>against her wall (ie., defenses, protection), v.8,9a<ul>
-<li>He hath stretched out a line...- ie., a plumb line. That which was not upright must be torn down. cp. <a href="2kin21.htm#13">2Kin 21:13</a>; <a href="isa28.htm#17">Isa 28:17</a>; <a href="isa34.htm#11">34:11</a>; <a href="amos7.htm#7">Amos 7:7,8</a>
-<li>He hath made the rampart... wall... gates... to lament {ie., mourn their failure}, languish {ie., grow weak} and sink into the ground. The physical barriers to the enemy are broken down.</ul>
-<li>against her rulers (leaders), v.9b,10a<ul>
-<li>The kings, princes, prophets, elders...- the defenders of the Law, have failed, and do not hear from God.</ul>
-<li>resulting in her sorrow, v.10b</ol>
+<li>He has violently taken away His Tabernacle (ie., the Temple).<br>The word used for Tabernacle, here, is HB= sok, which may be related to the HB word &quot;sukah&quot; meaning &quot;booth,&quot; or to the HB word &quot;suwk&quot; meaning &quot;hedge.&quot;<ul>
+<li>If the meaning is &quot;booth,&quot; the Lord has removed the place of meeting {assembly} which He had established in the midst of His people, as easily as a farmer removes a temporary shade shelter from a field, when the harvest is ended (cp. <a href="isa1.htm#8">Isa 1:8</a>).<br>
+<li>If the meaning is &quot;hedge,&quot; the Lord has turned the garden that He planted back to its natural state, by removing its hedge of protection (cp. <a href="psa80.htm#12">Psa 80:12</a>; <a href="psa89.htm#40">89:40</a>; <a href="isa5.htm#5">Isa 5:5</a>).</ul>
+<li>He hath cast off His altar... He hath abhorred His sanctuary...- cp. <a href="isa1.htm#13">Isa 1:13-15</a>; <a href="jer7.htm#12">Jer 7:12-14</a><dd>Their religious activity was not according to His will. The church should take heed (cp. <a href="rev2.htm#4">Rev 2:4,5</a>).</dd>
+<li>He hath given up into the hand of the enemy her walls of her palaces...-<dd>The Temple and its surrounding structures had been turned over to the heathen. They (the enemy) 'make a noise' in the LORD's House, as in the former days of Israel's feasts. But this is the sound, not of worship, but of demolition.</dd></ul>
+<li>against her wall (ie., the protective city wall), v.8,9a<ul>
+<li>He hath stretched out a line...- ie., a plumb line (a standard of 'right')<dd>That which was not upright must be torn down. cp. <a href="2kin21.htm#13">2Kin 21:13</a>; <a href="isa28.htm#17">Isa 28:17</a>; <a href="isa34.htm#11">34:11</a>; <a href="amos7.htm#7">Amos 7:7-9</a></dd>
+<li>He hath made the rampart... wall... gates... to lament {ie., mourn their failure}, languish {ie., grow weak} and sink into the ground.<dd>The physical barriers which kept the enemy outside the city have been broken down.</dd></ul>
+<li>against her rulers (leaders), v.9b,10<ul>
+<li>The kings, princes, prophets, elders...- The defenders of the Law, have failed. They receive no word from God.<dd>They and all their people are reduced to mourning for their hopeless condition.</ol>
 <dd>Additional notes on this section:<ul>
-<li>The many strong verbs that describe these actions show that the Lord Himself has purposely done these things (eg., &quot;The Lord was as an enemy: he hath swallowed up... he hath destroyed... he hath increased [her] mourning and lamentation.&quot; v.5)
+<li>The many strong verbs that describe these actions show that the LORD Himself has purposely done these things:<dd>eg., &quot;The Lord was as an enemy: he hath swallowed up... he hath destroyed... he hath increased [her] mourning and lamentation.&quot; (v.5)</dd>
 <li>In <a href="lam2.htm#1" target="lwr_lt">v.1-5</a>, it is &quot;the Lord&quot; {Adonai, master, ruler, husband, the One in authority} who takes these actions against His rebellious servants.
 <li>In <a href="lam2.htm#6" target="lwr_lt">v.6-10</a>, it is &quot;the LORD&quot; {Jehovah, the self existent One} who chose this people and this place for the glory of His Name, who violently takes away the garden {or, enclosed garden, cp. <a href="song4.htm#12">Song  4:12</a>} that He had planted for Himself.</ul>
 <dt>II. The resulting sorrow of Jeremiah: The lament of an eyewitness, <a href="lam2.htm#11" target="lwr_lt">v.11-19</a>
 <dd>Jeremiah was broken hearted and broken in health, having been overwhelmed with sorrow. 
-The &quot;bowels&quot; and &quot;liver&quot; were regarded as seats of the emotions and sympathies (cp. <a href="jer4.htm#19">Jer 4:19</a>). But strong emotions also have physical effects, such as tears, nausea and diarrhea (cp. <a href="job16.htm#13">Job 16:13-16</a>).<ol type="A">
+The &quot;bowels&quot; and &quot;liver&quot; were regarded as seats of the emotions and sympathies (cp. <a href="jer4.htm#19">Jer 4:19</a>). But strong emotions also have physical effects, such as tears, nausea and diarrhea (cp. <a href="job16.htm#13">Job 16:13-16</a>).<dd>The prophet weeps...<ol type="A">
 <li>for the children, v.11,12
-<li>for his inability to comfort his people, v.13 - Their wound was beyond curing (cp. <a href="jer8.htm#22">Jer 8:22</a>; <a href="jer30.htm#12">30:12</a>).
+<li>for his inability to comfort his people, v.13 - Their wound was beyond curing (cp. <a href="jer8.htm#21">Jer 8:21,22</a>; <a href="jer30.htm#12">30:12</a>).
 <li>for the error of false prophets, v.14 -<ul>
 <li>They had not discovered {ie., unveiled, revealed} the iniquity which led to their captivity.
-<li>Their false burdens, which contradicted God's Word through true prophets, seduced the people into destruction. (The word &quot;banishment&quot; is lit. &quot;seduction.&quot;)</ul>
+<li>Their false burdens, which contradicted God's Word (delivered by His true prophets), seduced the people and led them to destruction. (In v.14, the word &quot;banishment&quot; is lit., &quot;seduction.&quot;) cp. <a href="jer6.htm#14">Jer 6:14,15</a></ul>
 <li>for the mockery of their enemies, v.15-17<ul>
 <li>Is this... The perfection of beauty... The joy of the whole earth... - cp. <a href="psa48.htm#2">Psa 48:2</a>; <a href="psa50.htm#2">50:2</a>; <a href="isa64.htm#11">Isa 64:11</a>; <a href="deu29.htm#22">Deu 29:22-28</a>
-<li>We have swallowed her up {HB= bala}... - Israel's enemies take credit for what the Lord Himself has done (v.5).</ul>
-v.17 is a summary statement, reminding that the LORD, not their enemies, had caused their sorrows:<ul>
-<li>He hath done what He devised {purposed, planned}, including that which befell the children (cp. v.11,12,20,21; <a href="lev26.htm#27">Lev 26:27-29</a>; <a href="deu28.htm#53">Deu 28:53-57</a>).
+<li>We have swallowed her up {HB= bala}... - Israel's enemies take credit for what the Lord Himself has done (<a href="lam2.htm#5" target="lwr_lt">v.5</a>).</ul>
+<a href="lam2.htm#17" target="lwr_lt">Verse 17</a> is a summary statement, reminding Jerusalem that the LORD, not their enemies, had caused her sorrows:<ul>
+<li>He hath done what He devised {purposed, planned}, including that which befell the children (cp. v.11-12,20-21; <a href="lev26.htm#27">Lev 26:27-29</a>; <a href="deu28.htm#53">Deu 28:53-57</a>).
 <li>He hath fulfilled His Word, in spite of the conflicting message of the popular prophets (cp. v.14)
 <li>He hath thrown down, and not pitied - Therefore, comfort was futile (cp. v.13).
 <li>He hath caused thine enemy to rejoice over thee... and established their horn {their power} (cp. v.15,16).</ul>
 <li>for the despairing wail of the people toward the Lord, <a href="lam2.htm#18" target="lwr_lt">v.18-22</a><ol type="1">
-<li>Jeremiah observes some of the people praying (v.18)-<ul>
-<li>appealing to the Lord {Adonai} as their wall {protector, defender}, to remember His people, the apple of His eye (cp. <a href="deu32.htm#10">Deu 32:10</a>; <a href="psa17.htm#8">Psa 17:8</a>; <a href="zech2.htm#8">Zech 2:8</a>), and to intercede for them. (Read v.18 with the supplied word: &quot;Their heart cried unto the Lord, <i>saying</i>...&quot;)</ul>
-<li>Jeremiah encourages the people to pray (v.19)-<ul>
-<li>motivated to fervent prayer by the plight of their children, they were to pour out their soul before the Lord (cp. <a href="psa62.htm#8">Psa 62:8</a>; <a href="psa142.htm#2">142:2</a>; according to Jeremiah's example, v.11).</ul>
-<li>Jeremiah reports (or suggests) the substance of their prayer:<ol type="a">
-<li>Their Appeal to the LORD,<ul>
-<li>Consider to whom thou hast done this (ie., to the apple of thine eye), v.20
-<li>Consider our desperate condition, v.21<ul>
+<li>Jeremiah observes some of the people praying (v.18).-<br> (Read v.18 with the supplied word: &quot;Their heart cried unto the Lord, <i>saying</i>...&quot;)<ul>
+<li>They were appealing to the Lord {Adonai} as their wall {protector, defender}, to remember His people, the apple of His eye (cp. <a href="deu32.htm#10">Deu 32:10</a>; <a href="psa17.htm#8">Psa 17:8</a>; <a href="zech2.htm#8">Zech 2:8</a>), and to prevent their extinction.</ul>
+<li>Jeremiah encourages the people to pray (v.19).-<ul>
+<li>They should be motivated to fervent prayer by the plight of their children, they were to pour out their soul before the Lord (cp. <a href="psa62.htm#8">Psa 62:8</a>; <a href="psa142.htm#2">142:2</a>; according to Jeremiah's example, v.11).</ul>
+<li>Jeremiah supplies words for the substance of their prayer (v.20-22):<ol type="a">
+<li>Their Appeal to the LORD...<ul>
+<li>Consider to whom thou hast done this (ie., to the apple of thine eye), v.20a
+<li>Consider our desperate condition, v.20b-22<ul>
 <li>children are being cannibalized.
-<li>dead bodies lie discarded as refuse, indiscriminate of age, gender, or position. (The children who escape being eaten by their parents, are consumed by the enemy. v.22b)</ul></ul>
-<li>Their Acknowledgment that their bereavement is due to LORD's anger, v.22</ol></ol>
-What sorrows must the Lord bring upon His people before we seek Him as we ought? cp. <a href="2chr7.htm#14">2Chr 7:14</a>; <a href="isa55.htm#6">Isa 55:6-13</a>; <a href="jer29.htm#12">Jer 29:12-14</a><br>How much better to seek Him early? <a href="psa63.htm#1">Psa 63:1</a>; <a href="1tim2.htm#8">1Tim 2:8</a>
-</dl>
+<li>dead bodies lie discarded as refuse, indiscriminate of age, gender, or position.<br>The sword of the enemy consumed our priests, prophets, soldiers and such children as survived the siege.</ul></ul>
+<li>Their Acknowledgment that their bereavement is due to LORD's righteous anger (v.21,22).</ol></ol>
+What sorrows must the Lord bring upon His people before we seek Him as we ought? cp. <a href="2chr7.htm#14">2Chr 7:14</a>; <a href="isa55.htm#6">Isa 55:6-13</a>; <a href="jer29.htm#12">Jer 29:12-14</a><br>How much better to seek Him early? <a href="psa63.htm#1">Psa 63:1</a>; <a href="1tim2.htm#8">1Tim 2:8</a></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in <a href="lam3an.htm" target="upper">Lamentations 3</a>
 <br>Return to <a href="lam_menu.htm" target="lwr_lt">Lamentations - MENU page</a>.<br>
