--- a/www/the_book/prov23anb.htm
+++ b/www/the_book/prov23anb.htm
@@ -1,48 +1,49 @@
 <html>
 <head>
 <title>Proverbs 23:15-35 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="pro23.htm#15" target="lwr_lt">Proverbs 23:15-35</a></b> - <a href="provmenu.htm" target="lwr_lt">Outline of Proverbs (Menu page)</a><br>
-<dl><dt><b>The Measure of True Wealth... The Joy of Family... The Woe of Wine...</b><br>&nbsp;
-<dt><b><a href="pro23.htm#15" target="lwr_lt">23:15-19</a> - Review:</b>
-<dd>The first half of the chapter closed with the delight of a father in a son...<ul>
+<dl><dt><b>Warnings - The Poverty of Partying... The Fragile Joy of Family... The Woe of Wine...</b><dt>&nbsp;
+<dt><b>Review - <a href="pro23.htm#15" target="lwr_lt">23:15-19</a></b>
+<dd>The first half of chapter 23 closed with the delight of a father in a son...<ul>
 <li>whose heart is wise
 <li>who speaks right things
 <li>who fears the LORD
-<li>whose end {ie., after life} is according to the LORD's sure promises. The father of such a son is not disappointed in him. Likewise, the son will not be disappointed because he has followed the path of wisdom.</ul>
-<dd>In the last half of the chapter, the father offers additional practical guidance.
-<dt><b>The Measure of True Wealth</b> (<a href="pro23.htm#20" target="lwr_lt">23:20-23</a>)<ol type="A">
+<li>whose end {ie., after part} is according to the LORD's sure promises. The father of such a son is not disappointed in him. Likewise, the son will not be disappointed because he has followed the path of wisdom.</ul>
+<dd>In the last half of the chapter, the father offers additional practical guidance.<dt>&nbsp;
+<dt><b>The Poverty of Partying</b> (or) <b>The Measure of True Wealth</b> (<a href="pro23.htm#20" target="lwr_lt">23:20-23</a>)<ol type="A">
 <li>Be not among winebibbers... (<a href="pro23.htm#20" target="lwr_lt">23:20,21</a>) -<ul><li>The world will want you to attend their parties and social functions. But fleshly pleasure is fleeting and empty.
-<li>Lest you come to poverty (<a href="pro23.htm#21" target="lwr_lt">v.21</a>; <a href="pro21.htm#17">21:17</a>), you will be wise to stay away (<a href="1cor5.htm#11">1Cor 5:11</a>).<ul>
-<li>Israel's leaders, in their partying, led the nation to its downfall and captivities. <a href="isa5.htm#11">Isa 5:11-15,22-25</a>; <a href="isa28.htm#1">28:1-3</a>
-<li>For the Christian- Partying displays a lack of faith in the Lord's return (<a href="mat24.htm#45">Mat 24:45-50</a>).<br>Party life is contrary to the Christian life. <a href="rom13.htm#13">Rom 13:13</a>; <a href="eph5.htm#18">Eph 5:18</a>; <a href="1pet4.htm#3">1Pet 4:3,4</a></ul></ul>  
+<li>Lest you come to poverty (<a href="pro23.htm#21" target="lwr_lt">v.21</a>; <a href="pro21.htm#17">21:17</a>)...- You will be wise to stay away (<a href="1cor5.htm#11">1Cor 5:11</a>).<ul>
+<li>Ancient Israel's leaders did not heed this admonition and led the nation to its downfall and captivities. <a href="isa5.htm#11">Isa 5:11-15,22-25</a>; <a href="isa28.htm#1">28:1-3</a>
+<li>For the Christian- Partying displays a lack of faith in the Lord's return (<a href="mat24.htm#45">Mat 24:45-51</a>).<br>Party life is contrary to the Christian life. <a href="rom13.htm#13">Rom 13:13</a>; <a href="eph5.htm#18">Eph 5:18</a>; <a href="1pet4.htm#3">1Pet 4:3,4</a></ul></ul>  
 <li>Buy the truth... (<a href="pro23.htm#22" target="lwr_lt">23:22-25</a>) -<ul><li>Truth is not for sale. It cannot be purchased with gold (<a href="job28.htm#12">Job 28:12-19</a>).<li>It is offered, freely, by the LORD without money and without price (<a href="isa55.htm#1">Isa 55:1,2</a>).
-<li>A wise son will seek it with all of his being. <a href="pro2.htm#2">Pro 2:2-5</a>; <a href="pro4.htm#5">4:5-7</a>; <a href="mat16.htm#26">Mat 16:26</a></ul></ol>
-<dt><b>The Joy of Family</b> (<a href="pro23.htm#24" target="lwr_lt">23:24-28</a>)<ol type="A">
+<li>A wise son will seek it with all of his being. <a href="pro2.htm#2">Pro 2:2-5</a>; <a href="pro4.htm#5">4:5-7</a>; <a href="mat16.htm#26">Mat 16:26</a></ul></ol><dt>&nbsp;
+<dt><b>The Fragile Joy of Family</b> (<a href="pro23.htm#24" target="lwr_lt">23:24-28</a>)<ol type="A">
 <li>The Joy of Parents in a wise son -<dd>There is no greater joy for parents than to see their children turn out well (cf. <a href="pro23.htm#25" target="lwr_lt">v.25</a> with <a href="pro17.htm#25">Pro 17:25</a>). Of course, godly parents will have a higher standard of &quot;well&quot; than the world, which gauges success by money and position, rather than by &quot;truth and righteousness.&quot;</dd>
 <li>The Joy of children who have godly parents (<a href="pro23.htm#26" target="lwr_lt">v.26</a>) -<dd>The lives of godly parents must set a pattern of life for those who follow them.
 Ask yourself: When my children &quot;observe my ways,&quot; are they encouraged to walk with the LORD, or caused to stumble?
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Your heart must belong to the LORD, before you can teach His ways to your children (<a href="deu6.htm#4">Deu 6:4-7</a>). Remember &quot;just Lot&quot; who &quot;vexed his righteous soul, with seeing and hearing the unlawful deeds&quot; of the citizens of Sodom (<a href="2pet2.htm#7">2Pet 2:7,8</a>). He had compromised his testimony, to such an extent that when he warned his sons-in-law of the impending judgment, &quot;he seemed as one that mocked unto&quot; them (<a href="gen19.htm#14">Gen 19:14</a>). Whatever instruction in righteousness Lot had given to his children, did not sink in. He lost them all, even the daughters who escaped the city with him. Their immoral scheme (to become pregnant by their father, by making him drunk) showed that their hearts were in the moral gutter of Sodom.
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;So, Dad, if your children are to follow your heart, you must first steer a course wide 
-of the &quot;strange woman&quot; (<a href="pro23.htm#27" target="lwr_lt">23:27,28</a>)... pure of fleshly lusts, adultery, fornication, pornography, and all perversions. Here is another reason to avoid the partying crowd. But as we saw in chapter 7, the appeal of the strange woman is often private, seductive and deceiving (<a href="pro7.htm#12">Pro 7:12,22-27</a>).
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;And Son, even if your earthly father were to fail in this area, the counsel of the heavenly Father is the Truth which you cannot afford to sell. The price of giving yourself to such foolishness is far too high (<a href="pro22.htm#14">Pro 22:14</a>). Yet, with a little help from alcohol, many like Lot, lose their moral wallets, when their guard is down.</ol>
+<br>&nbsp; &nbsp; &nbsp;Your heart must belong to the LORD, before you can teach His ways to your children (<a href="deu6.htm#4">Deu 6:4-7</a>). Remember &quot;just Lot&quot; who &quot;vexed his righteous soul, with seeing and hearing the unlawful deeds&quot; of the citizens of Sodom (<a href="2pet2.htm#7">2Pet 2:7,8</a>). He had compromised his testimony, to such an extent that when he warned his sons-in-law of the impending judgment, &quot;he seemed as one that mocked unto&quot; them (<a href="gen19.htm#14">Gen 19:14</a>). Whatever instruction in righteousness Lot had given to his children, did not sink in. He lost them all, even the daughters who escaped the city with him. Their immoral scheme (to become pregnant by their father, by making him drunk) showed that their hearts were in the moral gutter of Sodom.
+<br>&nbsp; &nbsp; &nbsp;So, Dad, if your children are to follow your heart, you must first steer a course wide 
+of the &quot;strange woman&quot; (<a href="pro23.htm#27" target="lwr_lt">23:27,28</a>)... pure of fleshly lusts, adultery, fornication, pornography, and all perversions. Here is another reason to avoid the partying crowd. But as we saw in chapter 7, the deceptive appeal of the strange woman is often a private seduction (<a href="pro7.htm#12">Pro 7:12-27</a>).
+<br>&nbsp; &nbsp; &nbsp;And Son, even if your earthly father were to fail in this area, the counsel of the heavenly Father is the Truth which you cannot afford to sell. The price of giving yourself to such foolishness is far too high (<a href="pro22.htm#14">Pro 22:14</a>). Yet, with a little help from alcohol, many like Lot, lose their moral wallets, when their guard is down.</ol><dt>&nbsp;
 <dt><b>The Woes of Wine</b><ol type="A">
-<li>Woes in definition, <a href="pro23.htm#29" target="lwr_lt">23:29-33</a><dd>Woe {HB=owy}... Sorrow {HB=ab-owy} -  An exclamation of regret, redoubled.<ul>
+<li>Woes in definition, <a href="pro23.htm#29" target="lwr_lt">23:29-33</a><ul>
+<li>Woe {HB='oy}... Sorrow {HB='ab-oy} -  An exclamation of regret, redoubled.
 <li>contentions {strife} - fights
 <li>babbling... - senseless talk, a loose tongue that talks too much, revealing secrets.
 <li>wounds without cause...- from fights, from accidents, from falling...  <a href="pro20.htm#1">Pro 20:1</a>
-<li>at last, it biteth like a serpent... - 'in the end' {ie., 'afterwards,' cf. <a href="pro23.htm#18" target="lwr_lt">v.18</a>; <a href="pro5.htm#11">5:11</a>} <a href="isa28.htm#3">Isa 28:3,7,8</a>
-<dd>'Serpent' is the same word as in <a href="gen3.htm#1">Gen 3</a>.   Alcohol is a tool of the devil.  
+<li>at last, it biteth like a serpent... - 'in the end' {ie., 'afterwards'}
+<dd>Unlike the end of the wise son (<a href="pro23.htm#18" target="lwr_lt">v.18</a>), the end of the drunkard is not good (<a href="pro5.htm#11">5:11</a>; <a href="isa28.htm#3">Isa 28:3,7,8</a>).</dd>
+<dd>'Serpent' is the same word as in <a href="gen3.htm#1">Gen 3</a>. Alcohol is a tool of the devil.</dd>
 <li>thine eyes shall behold the strange woman... (example: Lot's daughters, <a href="gen19.htm#32">Gen 19:32</a>)
-<li>thy mouth shall utter perverse things... - eg., <a href="pro23.htm#29" target="lwr_lt">v.29</a> 'babbling,' also <a href="pro31.htm#4">Pro 31:4,5</a></ul></dd>
+<li>thy mouth shall utter perverse things... (v.33) - eg., <a href="pro23.htm#29" target="lwr_lt">v.29</a> 'babbling,' also <a href="pro31.htm#4">Pro 31:4,5</a></ul></dd>
 <li>Woes by example, <a href="pro23.htm#34" target="lwr_lt">29:34,35</a> - Two pictures:<ol type="1">
 <li>of drunken staggering and inability to stand, as if a sailor on a storm tossed ship.<dd> 
-The pitching of the deck may be sickening, but the effect is greatly amplified at the top of the mast. The sailor at the top of the mast is supposed to be keeping watch. But the man, who staggers due to alcohol, is not watching. <a href="luk21.htm#34">Luk 21:34</a>; <a href="mat24.htm#38">Mat 24:38,39</a></dd>
+The pitching of the deck may be sickening, but the effect is greatly amplified at the top of the mast. The sailor at the top of the mast is supposed to be keeping watch. But the man, who staggers due to alcohol, is not watching. <a href="mat24.htm#38">Mat 24:38,39</a>; <a href="luk21.htm#34">Luk 21:34</a></dd>
 <li>of senses so impaired by alcohol, that he is unaware and unfeeling of his injuries.<ul><li>Even the duration of his stupor is uncertain: &quot;When shall {ie., How long until} I awake.&quot;
 <li>But being foolish and addicted, once sober, he soon returns to the poison that bit him.</ul>
-<dt>There is a way of escape from this cycle: <a href="eph5.htm#14">Eph 5:14</a>; <a href="1cor6.htm#9">1Cor 6:9-11</a>. (Though some, having found it may turn back from it. <a href="2pet2.htm#20">2Pet 2:20-22</a>). Therefore, the wise will heed the heavenly Father (in <a href="pro23.htm#26" target="lwr_lt">Pro 23:26</a>, &quot;My son, give me thine heart...&quot;)</ol>
-</dl><br>
+<dt>There is a way of escape from this cycle: <a href="eph5.htm#14">Eph 5:14</a>; <a href="1cor6.htm#9">1Cor 6:9-11</a>.<dd>But beware... Some, who profess to follow God's way, have turned back. Making excuses for their sinful ways, they lead others to destruction. <a href="2pet2.htm#20">2Pet 2:20-22</a></dd><dt>Therefore, the wise will heed the heavenly Father's voice, &quot;My son, give me thine heart...&quot; (<a href="pro23.htm#26" target="lwr_lt">Pro 23:26</a>). cp. <a href="eph3.htm#16">Eph 3:16,17</a></ol></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study, in the third narrative section, which begins in <a href="prov30an.htm" target="upper">Proverbs 30</a>.
 <br>Return to <a href="provmenu.htm" target="lwr_lt">Proverbs - MENU page</a>.<br>
