--- a/www/the_book/prov2an.htm
+++ b/www/the_book/prov2an.htm
@@ -4,12 +4,12 @@
  <base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="pro2.htm#1" target="lwr_lt">Proverbs 2:1-22</a></b> - <a href="provmenu.htm" target="lwr_lt">Outline of Proverbs (Menu page)</a><br>
-<dl><dt><b>Words to a son</b> (continued)<br>&nbsp;
+<dl><dt><b>Words to a Son - The Responsibility to Choose Wisdom</b><dt>&nbsp;
 <dt>Review:<ul> 
 <li><a href="pro1.htm#7">Proverbs 1:7</a> - The Key verse of the book.
 <li>The Proverbs are &quot;governing principles&quot; (usually briefly stated) which are applicable to the diverse life experiences of all human beings.
-<li>Some of the proverbs are in the second person (addressed to &quot;thee&quot; or &quot;you&quot;), while others are in the third person (addressed as general principles to whoever would be wise). The third person Proverbs are the Proverbs of Solomon. While those in the second person, are the instructions to Solomon which he received, and recorded, as he heard them from his parents. We continue today, in a section of Proverbs to Solomon (<a href="pro2.htm#1">1:8</a>; <a href="pro2.htm#1" target="lwr_lt">2:1</a>). 
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The instruction which Solomon received was in keeping with <a href="deu17.htm#14">Deu 17:14-20</a>, to prepare him to rule God's people. That instruction was based upon the Word of God. However, hearing the Word, and even making a personal hand written copy of it, would not guarantee that a man would observe to do all that was written therein. As we come to Proverbs ch.2, observe the conditional aspect of receiving this instruction (if... then...):</ul>
+<li>Some of the proverbs are in the second person (addressed to &quot;thee&quot; or &quot;you&quot;), while others are in the third person (addressed as general principles to whoever would be wise). The third person Proverbs are the Proverbs of Solomon. While those in the second person, are the instructions to Solomon which he received, and recorded, as he heard them from his parents. Our study continues, in a section of Proverbs to Solomon (<a href="pro1.htm#8">1:8</a>; <a href="pro2.htm#1" target="lwr_lt">2:1</a>). 
+<br>&nbsp; &nbsp; &nbsp;The instruction which Solomon received was in keeping with <a href="deu17.htm#14">Deu 17:14-20</a>, to prepare him to rule God's people. That instruction was based upon the Word of God. However, hearing the Word, and even making a personal hand written copy of it, would not guarantee that a man would &quot;observe to do... all that is written therein&quot; (<a href="josh1.htm#8">Josh 1:8</a>). As we come to Proverbs ch.2, observe the conditional aspect of receiving this instruction (if... then...):</ul>
 <dt><a href="pro2.htm#1" target="lwr_lt">v.1-5</a> If... thou wilt...<dd><ul> 
 <li>receive
 <li>hide {ie., treasure up}... so that {in such a way that} you...<ul>
@@ -19,7 +19,7 @@
 <li>seek {enquire after} ['Where is the vein of Truth to be found? Can you lead me to it?']
 <li>search {to uncover secret things}... as for hid treasures (see <a href="job28.htm#12">Job 28:12-28</a>; <a href="mat6.htm#19">Mat 6:19-21</a>; <a href="luk11.htm#9">Luk 11:9-13</a>)<dd>['Lord, Is there something hidden beneath the surface, in this passage of your Word? Why did you use this word? Lord, open the eyes of my understanding, that being enlightened, I may know what is the hope of your calling, and what the riches of the glory of your inheritance in the saints, and what is the exceeding greatness of your power toward us, in Christ Jesus... (from <a href="eph1.htm#17">Eph 1:17-20</a>).]</ul>
 <dd>Then... thou shalt...<ul>
-<li>understand {discern} the fear of the LORD
+<li>understand {discern} the fear of the LORD.
 <li>find the knowledge {true perception, real acquaintance} of God. (<a href="jer29.htm#13">Jer 29:13</a>; <a href="joh17.htm#3">Joh 17:3</a>)</ul>
 <dd>Why must I apply myself to seek Him?
 <dt><a href="pro2.htm#6" target="lwr_lt">v.6-8</a> For... (Because...)<dd><ul>
@@ -34,37 +34,36 @@
 <li>Then thou shalt understand:<ul>
 <li>righteousness {that which is right in God's sight}
 <li>judgment {justice which is just in God's sight}
-<li>equity {consistent application of righteousness and justice, without respect of persons, without compromise or accomodation to circumstances (eg.situational ethics)}
+<li>equity {consistent application of righteousness and justice, without respect of persons, without compromise or accommodation to circumstances (eg., 'situational ethics')}
 <li>every good path - The way that God would have me to go. God's will in all matters.</ul>
 <li>When...<ul>
 <li>wisdom enters into thine heart (<a href="pro2.htm#1" target="lwr_lt">v.1,2</a>)
 <li>knowledge is pleasant {lovely, delightful} unto thy soul (<a href="pro2.htm#3" target="lwr_lt">v.3,4</a>)</ul>
 <li>[Then]... discretion / understanding shall preserve / keep thee...
-<dd>to deliver, from (two categories of danger)...<ol type="A">
+<dd>to deliver thee, from (two categories of danger)...<ol type="A">
 <li>the way of evil men, <a href="pro2.htm#12" target="lwr_lt">v.12-15</a>... which are &quot;froward&quot; {perverse} because they are not aligned with the True ways of God.
-<dd>Two types of danger are in view (the LORD delivers those who follow Him from both):<ol type="1">
-<li>the danger of becoming allied with the froward (<a href="pro1.htm#10">1:10-18</a>)
-<li>the damage caused by froward adversaries (<a href="pro16.htm#28">16:28</a>)</ol></dd>
+<dd>Two types of danger are in view (the LORD delivers those, who follow Him, from both):<ol type="1">
+<li>the danger of becoming allied with the froward (<a href="pro1.htm#10">1:10-18</a>).
+<li>the damage caused by froward adversaries (<a href="pro16.htm#28">16:28</a>).</ol></dd>
 <li>the strange woman, <a href="pro2.htm#16" target="lwr_lt">v.16-19</a><ul>
-<li>Two words are used for &quot;strange&quot;<ul>
+<li>Two words are used for &quot;strange&quot;-<ul>
 <li>the 'estranged' woman - who has willingly renounced her prior allegiances.
 <li>the 'stranger' - who, therefore, has become a 'foreigner' to God and His people.</ul>
 <li>She has forsaken two allegiances...<ul>
-<li>The guide of her youth - ie., her first husband, 'guide' is lit. her 'instructor in intimacy.'
+<li>The guide of her youth - ie., her first husband, 'guide' is lit., her 'instructor in intimacy.'
 <li>The covenant of her God - More than turning away from her husband, she has turned away from the God of whom she learned in her youth. She has fallen into apostasy. The picture goes beyond physical to spiritual adultery. <a href="eze16.htm#8">Eze 16:8,15f</a></ul>
 <li>The danger (from which the LORD delivers those who follow Him):<ul>
 <li>her house inclineth {sinks down} to death
 <li>her paths [lead downward] to the dead {HB=rephaim, the lost-spirits}
 <li>a dead end road, from which there is no return.</ul></ul></ol>
-<dd>Deliverance, from the way of perverse men and from the way to the house of the strange woman, comes through the discretion granted to the heart that diligently seeks the LORD and His Word. Solomon was instructed, by his father, and by God's Word concerning Israel's kings (<a href="deu17.htm#17">Deu 17:17,18</a>), to avoid entanglements with women. He records these instructions as he received them. But, strangely, the Proverbs of Solomon (those written in the third person) avoid this subject. Though Solomon applied the excellent principles of God's wisdom to almost every other area of life, he chose to follow his own way in this area, to his own downfall. <a href="1kin11.htm#1">1Kin 11:1-11</a></ul>
+<dd>Deliverance, from the way of perverse men and from the way to the house of the strange woman, comes through the discretion granted to the heart that diligently seeks the LORD and His Word. Solomon was instructed, by his father, and by God's Word concerning Israel's kings (<a href="deu17.htm#17">Deu 17:17,18</a>), to avoid entanglements with women. He records these instructions as he received them. But, strangely, the Proverbs of Solomon (those written in the third person) avoid this subject. Though Solomon applied the excellent principles of God's wisdom to almost every other area of life, he chose to follow his own way in this area. Through his lack of wisdom, in this area, Solomon sowed the seed of idolatry, which led to the nation's downfall (<a href="1kin11.htm#1">1Kin 11:1-11</a>).</ul>
 <dd>But God's Word is sure for those who seek Him with all their heart. <a href="pro2.htm#10" target="lwr_lt">Pro 2:10,11</a> ... for what purpose?...
 <dt><a href="pro2.htm#20" target="lwr_lt">v.20-22</a> That thou...<dd><ul>
 <li>mayest walk - in the way that is right before God. <a href="psa37.htm#23">Psa 37:23,24</a>
 <li>may dwell in the land -<ul>
-<li>The first commandment with promise: <a href="eph6.htm#1">Eph 6:1-3</a>
-<li>If Israel had given heed, then they would have been delivered from the sorrows of dispersion. 	<a href="psa37.htm#3">Psa 37:3,9,11,22,29</a>
-<li>But the same principle applies to our nation, and to you and me as individuals. <a href="psa37.htm#34">Psa 37:34-40</a></ul></ul>
-</dl><br>
+<li>The first commandment with promise: <a href="ex20.htm#12">Ex 20:12</a>; <a href="eph6.htm#1">Eph 6:1-3</a>
+<li>If Israel had given heed, then they would have avoided the sorrows of their dispersion. <a href="psa37.htm#3">Psa 37:3,9,11,22,29</a>
+<li>But the same principle applies to our nation, and to you and me as individuals. <a href="psa37.htm#34">Psa 37:34-40</a></ul></ul></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in <a href="prov3an.htm" target="upper">Proverbs 3</a>
 <br>Return to <a href="provmenu.htm" target="lwr_lt">Proverbs - MENU page</a>.<br>
