--- a/www/the_book/prov31an.htm
+++ b/www/the_book/prov31an.htm
@@ -1,43 +1,42 @@
 <html>
 <head>
 <title>Proverbs 31:1-31 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="pro31.htm#1" target="lwr_lt">Proverbs 31:1-31</a></b> - <a href="provmenu.htm" target="lwr_lt">Outline of Proverbs (Menu page)</a><br>
-<h3>The Words of King Lemuel</h3><dl>
-<dt><b>A mother's counsel: on being a King</b> (<a href="pro31.htm#1" target="lwr_lt">v.1-9</a>)<dl>
+<dl><dt><b>The Words of King Lemuel</b><dt>&nbsp;
+<dt><b>A mother's counsel: on being a King</b> (<a href="pro31.htm#1" target="lwr_lt">v.1-9</a>)
 <dt>King Lemuel...- There is no record of a king by this name.
 <dd>The name means &quot;for God&quot; or &quot;dedicated to God.&quot; 
 <dt>the prophecy {HB=massa', oracle, burden} that his mother taught {disciplined, admonished} him...<dd>It is probable that this is counsel which Solomon received from his mother, concerning the manner of life suitable to a king, who would truly serve God.
 <dt>What my son?...- Her counsel is worthy to be heard.
 <dd>For he is <i>her</i> son, not only brought up by her, but brought forth from her own body. Her concern, for his future, had driven her to petition God in his behalf, with vows. Why would he follow any counsel contrary to hers? In harmony with this son's father, she warns him of pitfalls to be avoided, and a right path to be followed (<a href="pro6.htm#20">Pro 6:20</a>).
 <dt>She warns the future king of dangers:<ol type="A">
-<li>women (<a href="pro31.htm#3" target="lwr_lt">v.3</a>) - As we reach the closing chapter of Proverbs,<dd>we are reminded that Wisdom has repeatedly warned sons of the dangers of the strange woman (eg., <a href="pro5.htm#1">Proverbs 5</a>). Solomon was conceived in the womb of another man's wife, due to the lust of his father, David (<a href="mat1.htm#6">Mat 1:6</a>). Perhaps Bathsheba, observing in her son, this same weakness, sought to direct him in a better way. Yet, Solomon's failure, to heed the voice of wisdom, would lead to the destruction of his kingdom (<a href="deu17.htm#17">Deu 17:17</a>; <a href="1kin11.htm#1">1Kin 11:1-13</a>; <a href="neh13.htm#26">Neh 13:26</a>).</dd>
-<li>wine (<a href="pro31.htm#4" target="lwr_lt">v.4-7</a>) - Solomon, in his search for purpose in life,<dd>experimented with partying and wine, but found them, like all of man's fleshly works, to be empty (<a href="ecc2.htm#1">Ecc 2:1-3,11</a>). In the end, he concluded that strong drink and good government do not mix (<a href="ecc10.htm#17">Ecc 10:17</a>). His mother had previously told him so:<ul><li>'Wine and strong drink is not for kings...'<ul>
+<li>women (<a href="pro31.htm#3" target="lwr_lt">v.3</a>) - As we reach the closing chapter of Proverbs,<dd>we are reminded that Wisdom has repeatedly warned sons of the dangers of the strange woman (eg., <a href="pro5.htm#1">Proverbs 5</a>). Solomon's mother conceived a prior son, due to the lust of his father David, while she was the wife of another man (<a href="mat1.htm#6">Mat 1:6</a>). She had suffered trauma from that adulterous relationship, grieving first over the death of her husband and then for her infant son. Perhaps Bathsheba, observing in Solomon the weakness of his father, sought to direct him in a better way. Solomon's failure, to heed the voice of wisdom, would lead to the division and eventual downfall of his kingdom (<a href="deu17.htm#17">Deu 17:17</a>; <a href="1kin11.htm#1">1Kin 11:1-13</a>; <a href="neh13.htm#25">Neh 13:25,26</a>).</dd>
+<li>wine (<a href="pro31.htm#4" target="lwr_lt">v.4-7</a>) - Solomon, in his search for purpose in life,<dd>experimented with partying and wine, but found them, like all of man's fleshly works, to be empty (<a href="ecc2.htm#1">Ecc 2:1-3,11</a>). In the end, he concluded that strong drink and good government do not mix (<a href="ecc10.htm#17">Ecc 10:17</a>). His mother had previously told him so:<ul><li>'It is not for kings... to drink wine, nor... strong drink...'<ul>
 <li>lest they forget {or, ignore} the Law.
-<li>lest they pervert {change, alter} judgment {the deciding of a conflict} (<a href="isa28.htm#7">Isa 28:7,8</a>; eg., <a href="mar6.htm#22">Mark 6:22-28</a>).</ul>
-<li>Wine and strong drink has a limited purpose...<dd>for the relief of pain at the point of death, and for other limited medicinal purposes (<a href="1tim5.htm#23">1Tim 5:23</a>).</ol>
+<li>lest they pervert {change, alter} judgment {the deciding of a conflict} (<a href="isa28.htm#7">Isa 28:7,8</a>; eg., <a href="mar6.htm#21">Mark 6:21-28</a>).</ul>
+<li>Wine and strong drink have a limited purpose...<dd>for the relief of pain at the point of death, and for other limited medicinal purposes (<a href="1tim5.htm#23">1Tim 5:23</a>).</dd></ol>
 <dt>She counsels the future king on the necessity of:<ol type="A">
-<li>righteous judgment (<a href="pro31.htm#8" target="lwr_lt">v.8-9</a>) - Great responsibility rests upon the king and all in authority (<a href="deu1.htm#16">Deu 1:16,17</a>).<dd>Perhaps it was his mother's counsel, which led Solomon to ask the Lord for wisdom to govern (<a href="1kin3.htm#5">1Kin 3:5-9</a>).</ul></dd>
+<li>righteous judgment (<a href="pro31.htm#8" target="lwr_lt">v.8-9</a>) - Great responsibility rests upon the king and all in authority (<a href="deu1.htm#16">Deu 1:16,17</a>).<dd>Perhaps it was his mother's counsel, which led Solomon to ask the Lord for wisdom to govern (<a href="1kin3.htm#5">1Kin 3:5-9</a>). More than a hundred years later, this wisdom was reflected in the instructions of Jehoshaphat (Solomon's great-great-grandson), to the judges who served under him (<a href="2chr19.htm#4">2Chr 19:4-11</a>).</dd>
 <li>a good wife (<a href="pro31.htm#10" target="lwr_lt">v.10-31</a>) - 
 <ul><li>who can find...? - The implication is that he, who searches and finds, will be well rewarded.
-<li>a virtuous woman... -<dd>In English, the word &quot;virtue&quot; usually refers to strength of moral character. However, the Hebrew word {HB=chayil} has broader application, referring to strength and valour (<a href="judg6.htm#12">Judg 6:12</a>), as of those who are valiant in battle, or strong financially (eg., this word is used of the 'wealth' of Boaz, <a href="ruth2.htm#1">Ruth 2:1</a>). The word speaks of ability, determinaton and strength of character. Ruth was a virtuous woman (<a href="ruth3.htm#11">Ruth 3:11</a>).</dd>
-<li>Her virtue affects: <ol type="1">
+<li>a virtuous woman...-<dd>In English, the word &quot;virtue&quot; usually refers to strength of moral character. However, the Hebrew word {HB=chayil} has broader application, referring to strength and valour (<a href="judg6.htm#12">Judg 6:12</a>), as of those who are valiant in battle, or strong financially (eg., this word is used of the 'wealth' of Boaz, <a href="ruth2.htm#1">Ruth 2:1</a>). The word speaks of ability, determinaton and strength of character. Ruth was a virtuous woman (<a href="ruth3.htm#11">Ruth 3:11</a>).</dd>
+<li>Her virtue affects:<ol type="1">
 <li>her husband (<a href="pro31.htm#10" target="lwr_lt">v.10-12</a>) -<ul>
 <li>the heart of her husband doth safely trust in her... (<a href="pro31.htm#11" target="lwr_lt">v.11</a>)
-<dd>He need not fear that she will run up a terrible credit card debt or spend all his money (taking a spoil of him). She is a true helpmeet, complementing and completing her husband. They move forward, together, to find and fulfil God's purpose for them. (<a href="gen2.htm#20">Gen 2:20-24</a>)</ul>
+<dd>He need not fear that she will run up a terrible credit card debt or spend all his money (taking a spoil of him). She is a true helpmeet, complementing and completing her husband. They move forward, together, to find and fulfill God's purpose for them. (<a href="gen2.htm#20">Gen 2:20-24</a>)</dd></ul>
 <li>her occupation (<a href="pro31.htm#13" target="lwr_lt">v.13-19</a>)- her industry and self-motivation<ul>
 <li>obtaining supplies and raw materials
 <li>providing for her family
 <li>investing in business (<a href="pro31.htm#16" target="lwr_lt">v.16</a>)
-<li>displaying ability, quality, and tireless strength (<a href="pro31.htm#17" target="lwr_lt">v.17,18</a>)<dd>
-She illustrates the old adage: &quot;Man works from sun to sun, but a woman's work is never done.&quot;</ul>
+<li>displaying ability, quality, and tireless strength (<a href="pro31.htm#17" target="lwr_lt">v.17,18</a>)<dd>She illustrates the old adage: &quot;Man works from sun to sun, but a woman's work is never done.&quot;</dd></ul>
 <li>her character (<a href="pro31.htm#20" target="lwr_lt">v.20</a>): Showing charity toward the poor, <a href="pro19.htm#17">Pro 19:17</a>; <a href="pro22.htm#9">22:9</a>
 <li>her household (<a href="pro31.htm#21" target="lwr_lt">v.21</a>)- prepared with adequate clothing for winter weather.
 <li>her person (<a href="pro31.htm#22" target="lwr_lt">v.22</a>)- well dressed.</ol>
-<li>Her virture overflows to such a degree, that its benefits are effectively doubled towards:<br>[Note the five reduplicated points, as observed by GWms.]<ol type="1">
-<li>her husband... is known in the gates... among elders (<a href="pro31.htm#23" target="lwr_lt">v.23</a>)
-<dd>There is truth in the old adage: &quot;Behind every good man is a good woman.&quot; As she labors for the welfare of her family, she also supports her husband in his calling, and enables him to fulfil his responsibilities outside of the home. In biblical times, there were chambers in the gates of walled cities, where the elders sat to judge and record legal matters and important transactions.</dd>
+<li>Her virture overflows to such a degree, that its benefits are effectively doubled towards...<br>[Note that the five points, below, duplicate those, above. GWms]<ol type="1">
+<li>her husband... is known in the gates... among the elders... (<a href="pro31.htm#23" target="lwr_lt">v.23</a>)
+<dd>There is truth in the old adage: &quot;Behind every good man is a good woman.&quot; As she labors for the welfare of her family, she also supports her husband in his calling, and enables him to fulfill his responsibilities outside of the home. In biblical times, there were chambers in the gates of walled cities, where the elders sat to judge and record legal matters and important transactions.</dd>
 <li>her occupation (<a href="pro31.htm#24" target="lwr_lt">v.24-25</a>) - Not only does she obtain quality materials (<a href="pro31.htm#13" target="lwr_lt">v.13,14</a>), but...<ul>
 <li>she makes and sells garments
 <li>her products are known for their good quality<br>eg. <a href="act9.htm#36">Acts 9:36-39</a> (Dorcas); <a href="1tim2.htm#9">1Tim 2:9,10</a>; <a href="1pet5.htm#5">1Pet 5:5,6</a>)</ul>
@@ -46,14 +45,13 @@ She illustrates the old adage: &quot;Man works from sun to sun, but a woman's wo
 <li>her person (<a href="pro31.htm#28" target="lwr_lt">v.28,29</a>) -<ul>
 <li>She is praise worthy, and praised - by her children and husband.
 <li>She excels other women in strength of character and ability.
-<dd>The ideal wife (as seen in this chapter), is on a level above most other &quot;virtuous&quot; women. Each is called to serve according to the gifts and abilities, which God has bestowed upon her. No woman, who serves the Lord faithfully, should allow herself to be discouraged that in her own estimation, she falls short of the &quot;super-woman,&quot; pictured here. Of necessity, this picture is of what men can see of activity and industry. But the Lord sees and judges the hearts (<a href="1cor4.htm#5">1Cor 4:5</a>).
-His evaluation looks upon her fear of the Lord, rather than upon external beauty (<a href="pro31.htm#30" target="lwr_lt">v.30</a>)</ul></ol>
-<dt>In <a href="pro31.htm#30" target="lwr_lt">verse 30</a>, the son is given a summary of what he ought to look for in a wife.<dd>The contrast between the virtuous woman (<a href="pro31.htm#10" target="lwr_lt">v.10-31</a>) and the strange woman (<a href="pro31.htm#2" target="lwr_lt">v.2,3</a>) who leads to debauchery, disgrace and destruction (<a href="pro31.htm#3" target="lwr_lt">v.3-7</a>), again highlights the divide between the Wisdom of God (<a href="pro8.htm#1">Pro 8:1-8</a>) and the deceptive lure of spiritual adultery (<a href="pro7.htm#21">Pro 7:21-27</a>).<ul>
-<li>Favour {graciousness} can be deceitful {ie., false, disappointing}. (eg., <a href="pro7.htm#14">Pro 7:14-18</a>).
+<dd>The ideal wife (as seen in this chapter), is on a level above most other &quot;virtuous&quot; women. Each is called to serve according to the gifts and abilities, which God has bestowed upon her. No woman, who serves the Lord faithfully, should allow herself to be discouraged that in her own estimation, she falls short of the &quot;super-woman,&quot; pictured here. Of necessity, this picture is of what men can see of activity and industry. But the Lord sees and judges the hearts (<a href="1cor4.htm#5">1Cor 4:5</a>). His evaluation looks upon her fear of the Lord, rather than upon external beauty (<a href="pro31.htm#30" target="lwr_lt">v.30</a>). He also sees the hidden tears and knows the burden of the brokenhearted.</dd></ul></ol>
+<dt>In <a href="pro31.htm#30" target="lwr_lt">verse 30</a>, the son is given a summary of what he ought to look for in a wife.<dd>
+A man would be wise to seek a virtuous woman, in whom his heart can safely trust (<a href="pro31.htm#11" target="lwr_lt">v.11</a>). He would be a fool to give his heart to many women (<a href="pro31.htm#2" target="lwr_lt">v.2,3</a>), or to the strange woman, who will draw him into debauchery, disgrace and destruction. The contrast, between the 'virtuous' and the 'strange' woman, highlights, once again, the divide between the Wisdom of God (<a href="pro8.htm#1">Pro 8:1-8</a>) and the deceptive lure of spiritual adultery (<a href="pro7.htm#21">Pro 7:21-27</a>).</dd><ul>
+<li>Favour {graciousness} can be deceitful {ie., false, disappointing}. (<a href="pro31.htm#30" target="lwr_lt">v.30</a>; eg., <a href="pro7.htm#14">Pro 7:14-18</a>).
 <li>External beauty is vain {lit., as a vapor, vanishing}. Good looks will not last. But their attraction can leave lasting consequences (eg., <a href="2sam11.htm#2">2Sam 11:2</a>).</ul>
-<dd>A woman that fears the Lord... shall be...<ul><li>praised {HB=halal} - not only by husband and children (<a href="pro31.htm#28" target="lwr_lt">v.28</a>), but by the One who is worthy of all praise (<a href="1cor4.htm#5">1Cor 4:5</a>; <a href="mat25.htm#20">Mat 25:20,21</a>).
-<li>rewarded according to her works (<a href="pro31.htm#31" target="lwr_lt">v.31</a>) <a href="1cor3.htm#12">1Cor 3:12-15</a></ul></ul></ol>
-</dl><br>
+<dt>A woman who fears the Lord... shall be...<ul><li>praised {HB=halal} - not only by husband and children (<a href="pro31.htm#28" target="lwr_lt">v.28</a>),<dd>but especially by the One who is worthy of all praise (<a href="1cor4.htm#5">1Cor 4:5</a>; <a href="mat25.htm#20">Mat 25:20-23</a>).</dd>
+<li>rewarded according to her works (<a href="pro31.htm#31" target="lwr_lt">v.31</a>) <a href="1cor3.htm#12">1Cor 3:12-15</a></ul></ul></ol></dl>
 <hr width=60% align=center size=1>
 <center>This concludes the study in the narrative sections of Proverbs.
 <br>Return to <a href="provmenu.htm" target="lwr_lt">Proverbs - MENU page</a>.<br>
