--- a/www/the_book/prov8ana.htm
+++ b/www/the_book/prov8ana.htm
@@ -1,44 +1,43 @@
 <html>
 <head>
 <title>Proverbs 8:1-20 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="pro8.htm#1" target="lwr_lt">Proverbs 8:1-21</a></b> - <a href="provmenu.htm" target="lwr_lt">Outline of Proverbs (Menu page)</a><br>
-<dl><dt><b>Wisdom appeals to the Simple</b>
-<p>Read <a href="pro8.htm#1" target="lwr_lt">Proverbs 8:1-6</a> - To this point, the book of Proverbs has presented the wisdom of experience, as addressed by a father to his son. In Chapter 8, Wisdom (personified) appeals directly to the &quot;simple&quot; (ie., to those who are naive), and the &quot;fools&quot; (ie., those who are dull of understanding).  Naturally, we don't like to think of ourselves in those terms. But, Wisdom is speaking to us. (eg., <a href="luk24.htm#25">Luk 24:25</a>; <a href="heb5.htm#11">Heb 5:11-13</a>).</p>
+<dl><dt><b>The Voice of Wisdom - The Appeal to the Simple</b>
+<p>Read <a href="pro8.htm#1" target="lwr_lt">Proverbs 8:1-6</a> - To this point, the book of Proverbs has presented the wisdom of experience, as addressed by a father to his son. In Chapter 8, Wisdom (personified) appeals directly to the &quot;simple&quot; (ie., to those who are naive), and the &quot;fools&quot; (ie., those who are dull of understanding).  Naturally, we don't like to think of ourselves in those terms. But, Wisdom is speaking to us (eg., <a href="luk24.htm#25">Luk 24:25</a>; <a href="heb5.htm#11">Heb 5:11-13</a>).</p>
 <p>Who is the person of Wisdom? As we will see, more clearly, in the latter portion of the chapter, it is the Lord Jesus Christ (<a href="1cor1.htm#30">1Cor 1:30</a>), who calls to us through His Word.</p>
-<p>If that is the case, why is Wisdom presented, here, in the feminine gender?  Perhaps...<Ul>
+<dt>If that is the case, why is Wisdom presented, here, in the feminine gender?  Perhaps...<ul>
 <li>To show the gentle tenderness of our Lord, who appeals,  in great love,  to &quot;whosoever will,&quot; but who will not force anyone to follow Him (eg., <a href="mat11.htm#28">Mat 11:28-30</a>).
-<li>To show the great contrast between the appeal of the flesh and the appeal of God's Word.</ul></p>
-<p>As you recall, chapters 6 and 7 warned sons to avoid the strange woman.<ul>
+<li>To show the great contrast between the appeal of the flesh and the appeal of God's Word.</ul><dt>&nbsp;
+<dt>As you recall, chapters 6 and 7 warned sons to avoid &quot;the strange woman.&quot;<ul>
 <li><a href="pro6.htm#20">6:20-25</a> - Sons are warned to beware of their own fleshly lusts toward her.
-<li><a href="pro7.htm#4">7:4-12</a> - Sons are warned to beware of her seductive appeal toward them.</ul></p>
-<p>The appeal of <b>Wisdom</b> <i>versus</i> the appeal of <i>the strange woman</i>...<ul>
+<li><a href="pro7.htm#4">7:4-12</a> - Sons are warned to beware of her seductive appeal toward them.</ul><dt>&nbsp;
+<dt>The appeal of <b>Wisdom</b> <i>versus</i> the appeal of <i>the strange woman</i>...<ul>
 <li>to the simple (<b><a href="pro8.htm#5" target="lwr_lt">8:5</a></b>; cp. <i><a href="pro7.htm#7">7:7</a></i>)
 <li>as a kinswoman (<b><a href="pro7.htm#4">7:4</a></b>; cp. <i><a href="pro7.htm#5">7:5,10</a></i>)
 <li>to intercept the simple along the way (<b><a href="pro8.htm#2" target="lwr_lt">8:2,3</a></b>; cp. <i><a href="pro7.htm#8">7:8,11,12</a></i>)
-<li>with a voice of reason (<b><a href="pro8.htm#1" target="lwr_lt">8:1,6</a></b>; cp. <i><a href="pro7.htm#11">7:11</a></i>).<br>Wisdom does not deceive or seduce, but appeals on the basis of that which is excellent and upright.</ul></p>
-<p>The words and lips of <b>Wisdom</b> (<b><a href="pro8.htm#7" target="lwr_lt">8:7-14</a></b>) <i>versus</i> those of <i>the strange woman</i> (<i><a href="pro7.htm#13">7:13-14</a></i>)...<dd>The speech of Wisdom...<ul>
+<li>with a voice of reason (<b><a href="pro8.htm#1" target="lwr_lt">8:1,6</a></b>; cp. <i><a href="pro7.htm#11">7:11</a></i>).<br>Wisdom does not deceive or seduce, but appeals on the basis of that which is excellent and upright.</ul><dt>&nbsp;
+<dt>The words and lips of <b>Wisdom</b> (<b><a href="pro8.htm#7" target="lwr_lt">8:7-14</a></b>) <i>versus</i> those of <i>the strange woman</i> (<i><a href="pro7.htm#13">7:13-14</a></i>)...<dd>The speech of Wisdom...<ul>
 <li>is truth... righteousness, <b><a href="pro8.htm#7" target="lwr_lt">8:7,8</a></b> (contrast, <i><a href="pro7.htm#14">7:14-17</a></i>)-
-<li>is free of wickedness, which Wisdom regards as an abomination {ie., a disgusting thing}, rather than as the height of enjoyment, <i><a href="pro7.htm#18">7:18</a></i>
+<li>is free of wickedness, which Wisdom regards as an abomination {ie., a disgusting thing},<dd>rather than as the height of enjoyment, <i><a href="pro7.htm#18">7:18</a></i></dd>
 <li>contains nothing froward {twisted} or perverse {perverted}, <b><a href="pro8.htm#8" target="lwr_lt">8:8</a></b> (cp. <i><a href="pro7.htm#18">7:18-21</a></i>).<dd>The ungodly twist God's Word to suit themselves. <a href="2pet3.htm#16">2Pet 3:16</a></dd>
 <li>is plain to him that understandeth, <b><a href="pro8.htm#9" target="lwr_lt">8:9</a></b>
-<dd>...but, unintelligible to those whose hearts are veiled in darkness (cp. <i><a href="pro7.htm#21">7:21-23</a></i>).<br>Though, the veil would be lifted, if they would turn to the Lord (<a href="2cor3.htm#13">2Cor 3:13-16</a>).</dd>
+<dd>...but, unintelligible to those whose hearts are veiled in darkness (cp. <i><a href="pro7.htm#21">7:21-23</a></i>).</dd><dd>Though, the veil would be lifted, if they would turn to the Lord (cp. <a href="2cor3.htm#13">2Cor 3:13-16</a>; <a href="eph5.htm#14">Eph 5:14,15</a>).</dd>
 <li>leads to lasting reward (<b><a href="pro8.htm#10" target="lwr_lt">8:10,11</a></b>) for those who &quot;seek first the Kingdom of God...&quot; (<a href="mat6.htm#33">Mat 6:33</a>). cp. <i><a href="pro7.htm#24">7:24-27</a></i>
-<li>is Person to person: &quot;I wisdom...&quot; (in <b><a href="pro8.htm#12" target="lwr_lt">8:12</a></b>, Wisdom presents itself as a person.)
-<dd>&quot;dwell with prudence {ie., shrewdness, discernment}...&quot;
-<br>&quot;and find out witty inventions {ie., crafty plots, evil devices}...&quot;
-<br>The person who heeds Wisdom will discern and avoid the deception to do wrong. (contrast: <i><a href="pro7.htm#7">7:7,22</a></i>)</dd>
+<li>is Person to person: &quot;I wisdom...&quot; (in <b><a href="pro8.htm#12" target="lwr_lt">8:12</a></b>, Wisdom presents itself as a Person.)
+<dd>&quot;...dwell with prudence {ie., shrewdness, discernment}...&quot;</dd>
+<dd>&quot;...and find out witty inventions {ie., crafty plots, evil devices}...&quot;</dd>
+<dd>The person who heeds Wisdom will discern and avoid the deception to do wrong. (contrast: <i><a href="pro7.htm#7">7:7,22</a></i>)</dd>
 <li>is of the LORD: &quot;The fear of the LORD is to hate evil...&quot; (<b><a href="pro8.htm#13" target="lwr_lt">8:13</a></b>) for evil is incompatible with the things He loves (<a href="psa19.htm#9">Psa 19:9-11</a>).
-<li>is &quot;Counsel... strength&quot; (<b><a href="pro8.htm#14" target="lwr_lt">8:14</a></b>). To those who heed God's Word, He gives the strength to resist the evil (eg., <a href="jam4.htm#6">Jam 4:6,7</a>), in contrast to yielding to sin (<i><a href="pro7.htm#21">7:21</a></i>).</ul></p>
-<dt><p>The reward of those who follow <b>Wisdom</b> (<b><a href="pro8.htm#15" target="lwr_lt">8:15-21</a></b>) <i>versus</i> those who follow <i>the strange woman</i> (<i><a href="pro7.htm#22">7:22-27</a></i>)<ul>
+<li>is &quot;Counsel... strength&quot; (<b><a href="pro8.htm#14" target="lwr_lt">8:14</a></b>). To those who heed God's Word, He provides the resources to resist the evil (eg., <a href="1cor10.htm#13">1Cor 10:13</a>; <a href="jam4.htm#6">Jam 4:6,7</a>), and to stand true for Him, against a continual barrage of seductive temptations to sin (<i><a href="pro7.htm#21">7:21</a></i>).</ul><dt>&nbsp;
+<dt>The reward of those who follow <b>Wisdom</b> (<b><a href="pro8.htm#15" target="lwr_lt">8:15-21</a></b>) <i>versus</i> those who follow <i>the strange woman</i> (<i><a href="pro7.htm#22">7:22-27</a></i>)<ul>
 <li><a href="pro8.htm#15" target="lwr_lt">8:15,16</a> - Noble leaders established, see <a href="dan2.htm#21">Dan 2:21</a> (versus being <i>destroyed and cast down</i>)
 <li><a href="pro8.htm#17" target="lwr_lt">8:17</a> - Loved by the Person of Wisdom (eg., <a href="joh14.htm#21">Joh 14:21</a>) (versus being <i>consigned to hell</i>)
 <li><a href="pro8.htm#18" target="lwr_lt">8:18,19</a> - Durable riches, better than gold (<a href="psa19.htm#9">Psa 19:9,10</a>) (versus the <i>wasting of temporal wealth and honor, <a href="pro6.htm#26">6:26,33</a></i>)
 <li><a href="pro8.htm#20" target="lwr_lt">8:20</a> - the paths of Righteousness... Judgment (ie., justice, right decisions) 
 <dd>Note the progression in <a href="1cor1.htm#30">1Cor 1:30</a> ...wisdom, righteousness, sanctification (growth in holy character), redemption (out of this evil world system). It all begins with receiving Christ, who is the Wisdom of God.  (versus the <i>downward spiral of unrighteousness, <a href="pro5.htm#8">5:8-13</a></i>)</dd>
-<li><a href="pro8.htm#21" target="lwr_lt">8:21</a> - Lasting treasure in a secure treasurery (as in  <a href="mat6.htm#19">Mat 6:19,20</a>; <a href="col2.htm#3">Col 2:3</a>) (versus <i>eternal loss, <a href="pro7.htm#26">7:26,27</a></i>)</ul></p>
-</dl><br>
+<li><a href="pro8.htm#21" target="lwr_lt">8:21</a> - Lasting treasure in a secure treasury (as in <a href="mat6.htm#19">Mat 6:19,20</a>; <a href="col2.htm#3">Col 2:3</a>) (versus <i>eternal loss, <a href="pro7.htm#26">7:26,27</a></i>)</ul></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in <a href="prov8anb.htm" target="upper">Proverbs 8:22-36</a>
 <br>Return to <a href="provmenu.htm" target="lwr_lt">Proverbs - MENU page</a>.<br>
