--- a/www/the_book/prov9an.htm
+++ b/www/the_book/prov9an.htm
@@ -1,60 +1,60 @@
 <html>
 <head>
 <title>Proverbs 9:1-18 - Notes</title>
- <base target="lwr_rt"> </head>
+<base target="lwr_rt"> </head>
 <body bgcolor="#ffff80">
 <b><a href="pro9.htm#1" target="lwr_lt">Proverbs 9:1-18</a></b> - <a href="provmenu.htm" target="lwr_lt">Outline of Proverbs (Menu page)</a><br>
-<dl><h3><b>The House of Wisdom</h3>
-<dt>Read Proverbs <a href="pro9.htm#1" target="lwr_lt">9:1-2</a></b><dd>
+<dl><b>The Voice of Wisdom - The Invitation to the House of Wisdom</b><dt>&nbsp;
+<dt><b>Read Proverbs <a href="pro9.htm#1" target="lwr_lt">9:1-2</a> - The Preparation of the House of Wisdom</b><dd>
 In our study of <a href="pro8.htm#22">Prov 8:22-36</a>, we saw that &quot;Wisdom personified&quot; is identified by the characteristics which are unique to Christ, the eternal Word, the Creator, who being equal with God, was always the delight of the Father and always delighted in the Father's will, which included the salvation of men, in whom He also delighted.
 <p>In ch. 9, Wisdom personified has built a house. Some see this as the &quot;School of Wisdom&quot; in contrast to the &quot;school of the foolish woman,&quot; in <a href="pro9.htm#13" target="lwr_lt">v.13f</a>. The school of wisdom is a substantial institution, well constructed and with its seven pillars, more impressive than a common house. It is also well provisioned.</p>
-<p>But whose house or school is this?</p><dl>
+<p>But whose house or school is this?</p></dt><dl>
 <dt>It is the house of Wisdom, who is (as we saw in ch. 8), the Lord Jesus Christ, who is both...<dd><ul>
-<li>the Rock, the foundation upon which it rests. <a href="mat16.htm#15">Mat 16:15-18</a>; <a href="eph2.htm#20">Eph 2:20-22</a>;
-<li>and the Builder of the house <a href="heb3.htm#3">Heb 3:3-6</a></ul>
+<li>the Rock, the foundation upon which the house rests. <a href="mat16.htm#15">Mat 16:15-18</a>; <a href="eph2.htm#20">Eph 2:20-22</a>;
+<li>and the Builder of the house. <a href="heb3.htm#3">Heb 3:3-6</a></ul>
 <dt>The pillars which support the edifice...<dd><ul> 
 <li>are hewn (cut, <a href="pro9.htm#1" target="lwr_lt">v.1</a>) out of the same Rock. <a href="1pet2.htm#5">1Pet 2:5,6</a>
 <li>that there are seven pillars, speaks of perfection and completeness. <ul>
-<li><a href="1tim3.htm#15">1Tim 3:15</a> - &quot;The church of God, which is...&quot; - Is it the Church, or God Himself, who is the pillar and ground of the truth? As I understand it, the church is the pillar. God is the Ground. The pillar, hewn out of the Rock, (the church, the body of 'called out ones' in Christ), stands in testimony to the Truth, which like the pillar, rests upon the Ground of God Himself (<a href="1cor3.htm#10">1Cor 3:10-12</a>).
-<li>The Builder places individual men as structural members, to uphold the church in His truth (<a href="gal2.htm#9">Gal 2:9</a>, James, Cephas and John... seemed to be pillars...). Individual believers who overcome, standing victoriously against the opposition of the world, in the strength of the Lord, will be made 'a pillar in the temple of my God...' (<a href="rev3.htm#11">Rev 3:11,12</a>).</ul></ul>
+<li><a href="1tim3.htm#15">1Tim 3:15</a> - &quot;The church of God, which is...&quot; - Is it the Church, or God Himself, who is &quot;the pillar and ground of the truth&quot;? As the editor understands it, the Church is the pillar. God is the Ground. The church, hewn out of the Rock (Christ's body built of stones which are alive with His nature), stands to lift high its testimony to the Truth. The pillar (the church) stands upon the foundation of the Truth, which is in God Himself (<a href="1cor3.htm#10">1Cor 3:10,11</a>; <a href="joh14.htm#6">Joh 14:6</a>).
+<li>The Builder places individual men as structural members, to uphold the church in His Truth (<a href="gal2.htm#9">Gal 2:9</a>, James, Cephas and John... seemed to be pillars...). Individual believers who overcome, standing victoriously against the opposition of the world, in the strength of the Lord, will be made 'a pillar in the temple of my God...' (<a href="rev3.htm#11">Rev 3:11,12</a>).</ul></ul>
 <dt>The provision of the house has already been fully prepared by the One who is Wisdom (<a href="mat22.htm#4">Mat 22:4</a>). 
 <dd>Through His one sufficient sacrifice, and in His own Person, He has provided &quot;all things that pertain unto life and godliness&quot; (<a href="2pet1.htm#3">2Pet 1:3</a>). Therefore...</dl>
-<dt><b><a href="pro9.htm#3" target="lwr_lt">9:3-6</a> - The Invitation from Wisdom</b><dl>
+<dt><b><a href="pro9.htm#3" target="lwr_lt">9:3-6</a> - The Invitation from Wisdom</b></dt><dl>
 <dt>The availability of His provision is advertised widely (<a href="pro9.htm#3" target="lwr_lt">v.3</a>; <a href="mat22.htm#2">Mat 22:2-4</a>).
 <dt>The invitation is addressed &quot;to the simple... him that lacks understanding...&quot; 
 <dd>Unlike a potluck dinner, where the guests are expected to contribute to the provision, the invitation is to those who have nothing to bring.  All they must do is &quot;Come... eat of my bread... drink of the wine which I have mingled {ie., poured out}...&quot;<ul> 
 <li>The offer is...<ul>
-<li>made freely: &quot;without money and without price&quot; (<a href="isa55.htm#1">Isa 55:1</a>). 
+<li>made freely: &quot;without money and without price&quot; (<a href="isa55.htm#1">Isa 55:1-3</a>). 
 <li>to everyone who recognizes his need &quot;whoso is simple, let him turn hither...&quot; (eg., <a href="joh3.htm#16">Joh 3:16</a>).
 <li>of repentance unto life, and a new way of living (<a href="pro9.htm#6" target="lwr_lt">v.6</a>; <a href="2cor5.htm#14">2Cor 5:14,15</a>).</ul>
 <li>Wisdom has made full provision:<ul>
 <li><a href="pro9.htm#2" target="lwr_lt">v.2</a> - &quot;She hath killed {slaughtered} her beasts {slaughter}...&quot; (cp. <a href="isa53.htm#7">Isa 53:7)
-<li><a href="pro9.htm#2" target="lwr_lt">v.2,5</a> - &quot;She hath furnished {set} her table&quot; with bread and wine. (eg., <a href="1cor11.htm#22">1Cor 11:23-26</a>)</ul></ul></dl>
-<dt><b><a href="pro9.htm#7" target="lwr_lt">9:7-12</a> - The varied responses to the messengers of Wisdom</b><dl>
+<li><a href="pro9.htm#2" target="lwr_lt">v.2,5</a> - &quot;She hath furnished {set} her table&quot; with bread and wine. (eg., <a href="1cor11.htm#23">1Cor 11:23-26</a>)</ul></ul></dl>
+<dt><b><a href="pro9.htm#7" target="lwr_lt">9:7-12</a> - The varied responses to the messengers of Wisdom</b></dt><dl>
 <dt>How is the messenger to present the message? (<a href="pro9.htm#7" target="lwr_lt">v.7-9</a>; compare <a href="2tim4.htm#2">2Tim 4:2</a>)<dd><ul>
 <li>Reprove {HB=yacar,chasten, discipline, admonish, correct} -
-<li>Rebuke {HB=yakach, judge, convict, correct} - Both words imply a firm stand upon truth, in the face of opposition and rejection.
-<li>Give [instruction]... - 'give' {HB=nathan, bestow, present, offer} - There is no need to press the matter, for the wise man receives it readily.  A wise man may fall into error, but he will receive correction with appreciation and as beneficial.</ul>
+<li>Rebuke {HB=yakach, judge, convict, correct} -<dd>Both words imply a firm stand upon truth, in the face of opposition and rejection.</dd>
+<li>Give [instruction]... - 'give' {HB=nathan, bestow, present, offer} -<dd>There is no need to press the matter, for the wise man receives it readily.</dd><dd>A wise man may fall into error, but he will receive correction with appreciation, for he desires to live according to the Truth.</dd></ul>
 <dt>How is the messenger, who presents Wisdom, received?<dd><ul>
 <li>The scorner... -  'hates' the messenger of truth, and does what he can to bring 'shame' {dishonor, disgrace} upon him. 
-<li>The wicked man...- accuses the messenger of moral stain or defect. He points to some alleged 'blot' in the messenger's character, to distract from his own.
-<li>The wise man... the just {righteous} man... - Responds with love toward the messenger who corrects him. He takes the chastening to heart, and grows in wisdom and understanding.</ul>
+<li>The wicked man...- accuses the messenger of moral stain or defect.<dd>He points to some alleged 'blot' in the messenger's character, to distract from his own.</dd>
+<li>The wise man... the just {righteous} man...- Responds with love toward the messenger who corrects him.<dd>He takes the chastening to heart, and grows in wisdom and understanding.</dd></ul>
 <dt>The fear of the LORD is the beginning...<dd><ul>
-<li>of knowledge {HB=da'ath, perception, understanding} (<a href="pro1.htm#7">1:7</a>) - for the youth, laying the groundwork. [eg., The knowledge of good and evil (<a href="gen2.htm#9">Gen 2:9</a>), the skill of a craft (<a href="ex31.htm#3">Ex 31:3</a>).]
-<li>of wisdom {HB=chokmah, advanced skill, shrewdness, prudence, discernment} (<a href="pro9.htm#10" target="lwr_lt">9:10</a>) - for the maturing righteous man, building upon the foundation. [eg., Solomon's wisdom was superior to the advanced wisdom of the surrounding nations (<a href="1kin4.htm#30">1Kin 4:30</a>). The wisdom of the supervisors in the construction of the Tabernacle, guided those of lesser skill (eg., <a href="ex31.htm#2">Ex 31:2,3</a>).]</ul>
+<li>of knowledge {HB=da'ath, perception, understanding} (<a href="pro1.htm#7">1:7</a>) - for the youth, laying the groundwork of life.<dd>This word is used of the 'knowledge' of good and evil (<a href="gen2.htm#9">Gen 2:9</a>), and of the 'skill' of a craftsman (<a href="ex31.htm#3">Ex 31:3</a>).
+<li>of wisdom {HB=chokmah, advanced skill, shrewdness, prudence, discernment} (<a href="pro9.htm#10" target="lwr_lt">9:10</a>) -<dd>- for the maturing righteous man, building his life upon the Foundation.</dd><dd>This word is used of Solomon's 'wisdom,' which was superior to the advanced 'wisdom' of the surrounding nations (<a href="1kin4.htm#30">1Kin 4:30</a>), and of the 'wisdom' of the supervisors over the construction of the Tabernacle, who guided those of lesser skill (eg., <a href="ex31.htm#2">Ex 31:2,3</a>).</dd></ul>
 <dt>The fear of the LORD... the knowledge of the Holy is understanding...-<dd>Such knowledge is:<ul>
 <li>unto life - 'thy days multiplied... years of thy life increased...'- <a href="joh17.htm#3">Joh 17:3</a> whom to know is life eternal...
-<li>for thyself...- Each individual bears the consequences of receiving, or rejecting, Wisdom.</ul></dl>
-<dt><b><a href="pro9.htm#13" target="lwr_lt">9:13-18</a> - The house of the foolish woman -</b><dl><ol type="A">
+<li>for thyself...- How will you respond to the invitation to the House of Wisdom?
+<dd>As each decides, each individual bears the consequences of receiving (or rejecting) that invitation. <a href="joh14.htm#1">Joh 14:1-6</a>; <a href="mat22.htm#1">Mat 22:1-14</a></dd><dd>The Church (GK= ecclesia, called out ones) consists of those who have not only heard, but also believed and received the word of Truth concerning Christ. <a href="joh12.htm#48">Joh 12:48</a>; <a href="1the2.htm#13">1The 2:13</a></dd></ul></dl>
+<dt><b><a href="pro9.htm#13" target="lwr_lt">9:13-18</a> - The house of the foolish woman -</b></dt><dl><ol type="A">
 <li>It's lack of foundation (<a href="pro9.htm#13" target="lwr_lt">v.13</a>) -<dd>For all of her noise, by which calls attention to herself, she lacks true substance. That she is called 'foolish' does not mean that she is not intelligent, skilled, or learned. The 'school of the foolish woman' is well regarded as an institution of higher education. The foolishness of the world is that, for all of their worldly wisdom, they do not fear the LORD. Apart from 'the beginning of wisdom and understanding,' they cannot come to a knowledge of the Truth. (<a href="pro9.htm#10" target="lwr_lt">v.10</a>; <a href="1cor3.htm#18">1Cor 3:18,19</a>; <a href="2tim3.htm#7">2Tim 3:7</a>).</dd>
-<li>It's open door (<a href="pro9.htm#14" target="lwr_lt">v.14-17</a>) -<dd>Little advertising is needed, due to her seductive appeal to the flesh.<ul><li>While wisdom sends messengers to proclaim her invitation in the highest places of the city (<a href="pro9.htm#3" target="lwr_lt">v.3,4</a>), the city has put the house of the foolish woman in that exalted place. It is from her seat of honor {HB=kicce', a throne}, that she seduces those who pass by. No one can avoid hearing her call.
-<li>She appeals to the simple {naive} who lack understanding. She invites them to turn in, on the broad way &quot;that leads to destruction, and many go in thereat&quot; (<a href="mat7.htm#13">Mat 7:13</a>). Only a few escape her seduction: those few who respond to the voice of Wisdom (<a href="pro9.htm#4" target="lwr_lt">v.4-6</a>).
+<li>It's open door (<a href="pro9.htm#14" target="lwr_lt">v.14-17</a>) -<dd>Little advertising is needed, due to her seductive appeal to the flesh.<ul><li>While Wisdom 'sends forth' messengers to proclaim her invitation in the highest places of the city (<a href="pro9.htm#3" target="lwr_lt">v.3,4</a>), the city has put the house of the foolish woman in that exalted place. It is from her 'seat' of honor {HB=kicce', a throne}, that she seduces those who pass by. No one can avoid hearing her call.
+<li>She appeals to the simple {naive} who lack understanding. She invites them to turn in, on the broad way &quot;that leads to destruction, and many... go in thereat&quot; (<a href="mat7.htm#13">Mat 7:13</a>). Only a few escape her seduction: those few who respond to the voice of Wisdom (<a href="pro9.htm#4" target="lwr_lt">v.4-6</a>).
 <li>She promises secret pleasures (<a href="pro9.htm#17" target="lwr_lt">v.17</a>). But her promises are empty, and lead to entrapment.</ul></dd>
 <li>It's trap door (<a href="pro9.htm#18" target="lwr_lt">v.18</a>) - 
 <dd>Rather than being the promised high place of pleasure, this door opens to the lowest place. Her guests {HB=qara, called out ones} take their place among the spirits of dead men, awaiting judgment. 
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;How much better, to be among Wisdom's 'called out ones,' who enter into life, and that more abundantly. 
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What a privilege is given, to we who fear the LORD, to be among the messengers who proclaim His invitation to life, in a world clamouring for the way that seems right to them, but which leads to death. <a href="pro14.htm#12">Pro 14:12</a></ol></dl>
-</dl><br>
+<br>&nbsp; &nbsp; &nbsp;How much better, to be among Wisdom's 'called out ones,' who enter into life, and that more abundantly (<a href="joh10.htm#9">Joh 10:9,10</a>). 
+<br>&nbsp; &nbsp; &nbsp;What a privilege is given, to us who fear the LORD, to proclaim His invitation to the way of Life, in a world clamouring for the way that seems right to them, but which leads to death. <a href="pro14.htm#12">Pro 14:12</a></ol></dl></dl>
 <hr width=60% align=center size=1>
 <center>Click here to continue the study in the second narrative section, which begins in <a href="prov23ana.htm" target="upper">Proverbs 23:1-18</a>
 <br>Return to <a href="provmenu.htm" target="lwr_lt">Proverbs - MENU page</a>.<br>
