--- a/www/the_book/provmenu.htm
+++ b/www/the_book/provmenu.htm
@@ -9,24 +9,28 @@
 <dt><b>The Proverbs of Solomon -</b>
 <dt>Major divisions of the narrative sections:
 <dd>1. Introduction - <a href="prov1ana.htm" target="upper">Prov 1:1-7</a>
-<dd>2. Words to a Son - <a href="prov1anb.htm" target="upper">Prov 1:7-33</a>
-   <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (continued) - <a href="prov2an.htm" target="upper">Prov 2:1-22</a>
-<dd>3. Benefits of Wisdom - <a href="prov3an.htm" target="upper">Prov 3:1-35</a>
-<dd>4. The Voice of Experience - <a href="prov4an.htm" target="upper">Prov 4:1-27</a>
-<dd>5. The Strange Woman - <a href="prov5an.htm" target="upper">Prov 5:1-23</a>
-<dd>6. Two Sons, in Contrast - <a href="prov6an.htm" target="upper">Prov 6:1-19</a>
-<dd>7. To Sons, concerning Women - <a href="prov7an.htm" target="upper">Prov 6:20-7:27</a>
-<dd>8. Wisdom to the Simple - <a href="prov8ana.htm" target="upper">Prov 8:1-21</a>
-<dd>9. Wisdom Identified - <a href="prov8anb.htm" target="upper">Prov 8:22-36</a>
-<dd>10. The House of Wisdom - <a href="prov9an.htm" target="upper">Prov 9:1-18</a>
-<dd>*<i> 11. Individual Proverbs</i> *, <a href="pro10.htm" target="lwr_rt">Prov ch. 10</a>-22
-<dd>12. Warnings - <a href="prov23ana.htm" target="upper">Prov 23:1-18</a>
-<dd>13. Re: Wine - <a href="prov23anb.htm" target="upper">Prov 23:19-35</a>
-<dd>*<i> 14. Individual Proverbs</i> *, <a href="pro24.htm" target="lwr_rt">Prov ch. 24</a>-29
-<dd>15. The Words of Agur - <a href="prov30an.htm" target="upper">Prov 30</a>
-<dd>16. The Words of King Lemuel - <a href="prov31an.htm" target="upper">Prov 31</a>
-<br>&nbsp;
-<dd>* We have not provided commentary on the many individual proverbs, in the non-narrative sections. We encourage you to read and study these chapters for yourself. The links provided, to the <i>Individual Proverbs</i>, are to the text of the first chapter in each section. You can read through the section from the beginning, or use the <a href="b-lookup.htm" target="lwr_lt">Bible Text look-up</a> for direct access to other chapters.
+<dd>2. Words to a Son about Wisdom -<ol type="a">
+<li>The Need to Acquire Wisdom - <a href="prov1anb.htm" target="upper">Prov 1:7-33</a>
+<li>The Responsibility to Choose Wisdom - <a href="prov2an.htm" target="upper">Prov 2:1-22</a>
+<li>The Benefits of Wisdom - <a href="prov3an.htm" target="upper">Prov 3:1-35</a></ol>
+<dd>3. The Wisdom of Experience -<ol type="a">
+<li>The Choice of two Paths - <a href="prov4an.htm" target="upper">Prov 4:1-27</a>
+<li>The Choice of two Women - <a href="prov5an.htm" target="upper">Prov 5:1-23</a>
+<li>The Contrast of two Sons - <a href="prov6an.htm" target="upper">Prov 6:1-19</a>
+<li>The Character of Sexual Seduction - <a href="prov7an.htm" target="upper">Prov 6:20-7:27</a></ol>
+<dd>4. The Voice of Wisdom -<ol type="a">
+<li>The Appeal to the Simple - <a href="prov8ana.htm" target="upper">Prov 8:1-21</a>
+<li>The Identification of Wisdom's Person- <a href="prov8anb.htm" target="upper">Prov 8:22-36</a>
+<li>The Invitation to Wisdom's House - <a href="prov9an.htm" target="upper">Prov 9:1-18</a></ol>
+<dd>*<i> 5. Individual Proverbs</i> *- <a href="pro10.htm" target="lwr_rt">Prov ch. 10</a>-22
+<dd>6. Warnings -<ol type="a">
+<li>About the dangers of worldly Friendships -<a href="prov23ana.htm" target="upper">Prov 23:1-18</a>
+<li>About the dangers of Wine - <a href="prov23anb.htm" target="upper">Prov 23:19-35</a></ol>
+<dd>*<i> 7. Individual Proverbs</i> *- <a href="pro24.htm" target="lwr_rt">Prov ch. 24</a>-29
+<dd>8. The Words of Agur - <a href="prov30an.htm" target="upper">Prov 30</a>
+<dd>9. The Words of King Lemuel - <a href="prov31an.htm" target="upper">Prov 31</a>
+<dt>&nbsp;
+<dd>* The Book Notes do not provide commentary on the many individual proverbs, in the non-narrative sections. You are encouraged to read and study these chapters for yourself. The links provided, to the <i>Individual Proverbs</i>, are to the text of the first chapter in each section. You can read through the section from the beginning, or use the <a href="b-lookup.htm" target="lwr_lt">Bible Text look-up</a> for direct access to a specific chapter.
 </dl><br>
 <hr width=60% align=center size=1>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
